--- a/src/main/resources/templates/blog/index.html
+++ b/src/main/resources/templates/blog/index.html
@@ -2,11 +2,10 @@
 <html>
 <head>
 <title>何彪个人博客-一个开启你记录旅行的足迹和分享途中所见所闻，与探讨互联网神秘技术的网站</title>
-<meta name="keywords" content="何彪个人博客,罗俊杰博客，罗俊杰" />
+<meta name="keywords" content="何彪个人博客" />
 <meta name="description" content="一个关注旅行，在路上寻找那个丢失自我，远离城市的喧哗，放慢脚步去享受慢生活，分享在路上所见所闻，与大家一起发现这世界的千奇百怪！" />
 <link href="/css/base1.css" rel="stylesheet">
 <link href="/css/index1.css" rel="stylesheet">
-<script type="text/javascript" src="/js/jquery.min.js"></script>
 <script type="text/javascript" src="/js/sliders.js"></script>
 <!--[if lt IE 9]>
 
@@ -14,7 +13,7 @@
 <script src="/js/modernizr.js"></script>
 
 <!-- 返回顶部调用 begin -->
-<script type="text/javascript" src="/js/jquery.js"></script>
+<script type="text/javascript" src="/js/jquery.min.js"></script>
 <script type="text/javascript" src="/js/js.js"></script>
 <script src="/js/swfobject_modified.js" type="text/javascript"></script>
 <!-- 返回顶部调用 end-->
@@ -70,16 +69,16 @@ body, td, th {
       <div class="dateview">2014-06-27</div>
     </li>
     <li class="n2"><a href="/" target="_blank">相识</a>
-      <div class="dateview">2014-07-04</div>
+      <div class="dateview">2015-07-04</div>
     </li>
     <li class="n3"><a href="/" target="_blank">相知</a>
-      <div class="dateview">2014-10-01</div>
+      <div class="dateview">2016-10-01</div>
     </li>
     <li class="n4"><a href="/" target="_blank">相恋</a>
-      <div class="dateview">2015-02-14</div>
+      <div class="dateview">2017-02-14</div>
     </li>
     <li class="n5"><a href="/" target="_blank">相爱</a>
-      <div class="dateview">2015-3-05</div>
+      <div class="dateview">2018-3-05</div>
     </li>
   </ul>
 </div>
@@ -90,8 +89,9 @@ body, td, th {
   <!--l_box-left开始-->
   <div class="l_box f_l"> 
     <!--topnews内容-->
-    <div class="topnews">
-      <h2> <b>今日</b>推荐 </h2>
+    <div class="topnews" id="findIndex">
+      <!--<h2> <b>今日</b>推荐 </h2>
+
       <div class="blogs">
         <figure><a href='/' class='preview'><img src='/images/1447642404150745-lp.png'/></a> </figure>
         <h3><a href="/">给我一个答案</a></h3>
@@ -100,6 +100,8 @@ body, td, th {
           <p class="autor"> <span class="lm f_l"><a href="/">忙里偷闲</a></span> <span class="dtime f_l">2015-11-16</span> <span class="viewnum f_l">浏览（88）</span> <span class="pingl f_l">评论（<a>0</a>）</span> </p>
         </ul>
       </div>
+
+
       <div class="blogs">
         <figure><a href='/' class='preview'><img src='/images/1447642096207160-lp.png'/></a> </figure>
         <h3><a href="/">生活是什么？</a></h3>
@@ -171,7 +173,7 @@ body, td, th {
         <ul>
           <p class="autor"> <span class="lm f_l"><a href="/">闲暇时光</a></span> <span class="dtime f_l">2015-09-14</span> <span class="viewnum f_l">浏览（188）</span> <span class="pingl f_l">评论（<a>0</a>）</span> </p>
         </ul>
-      </div>
+      </div>-->
       
       <!--topnews内容-->
       
@@ -232,9 +234,9 @@ window.onload = function ()
 </script>
       <div class="ms-top">
         <ul class="hd" id="tab">
-          <li class="cur"><a href="/">点击排行</a></li>
-          <li><a href="/">最新文章</a></li>
-          <li><a href="/">站长推荐</a></li>
+          <li class="cur"><a href="#">点击排行</a></li>
+          <li><a href="#">最新文章</a></li>
+          <li><a href="#">站长推荐</a></li>
         </ul>
       </div>
       <div class="ms-main" id="ms-main">
@@ -274,7 +276,7 @@ window.onload = function ()
     <!--切换卡 moreSelect end -->
     
     <div class="cloud">
-      <h3>标签云<a href="/">更多>></a></h3>
+      <h3>标签云<a href="/tags">更多>></a></h3>
       <ul>
         <li><a href='/' class='tagc1'>摄影</a></li>
         <li><a href='/' class='tagc1'>认识</a></li>
@@ -364,5 +366,7 @@ window.onload = function ()
 <script type="text/javascript">
 swfobject.registerObject("FlashID");
 </script>
+<script src="/js/vue.js" type="text/javascript"></script>
+<script src="/js/index.js" type="text/javascript"></script>
 </body>
 </html>
