--- a/src/main/resources/templates/blog/index.html
+++ b/src/main/resources/templates/blog/index.html
@@ -182,11 +182,11 @@ body, td, th {
         <ul>
           <li><a href='/' target='_blank'>何彪个人博客微博</a> </li>
           <li><a href='/' target='_blank'>QQ个性网</a> </li>
-          <li><a href='/' target='_blank'>网站目录</a> </li>
+          <li><a href='http://www.zizhuling.cn' target='_blank'>网站目录</a> </li>
           <li><a href='/' target='_blank'>0hacker</a> </li>
           <li><a href='/' target='_blank'>贵阳IT信息网</a> </li>
           <li><a href='/' target='_blank'>南宁风云网</a> </li>
-          <li><a href='/' target='_blank'>毛小驴的博客</a> </li>
+          <li><a href='/' target='_blank'>杨青的博客</a> </li>
         </ul>
       </div>
     </div>
@@ -240,34 +240,34 @@ window.onload = function ()
         </ul>
       </div>
       <div class="ms-main" id="ms-main">
-        <div style="display: block;" class="bd bd-news" >
-          <ul>
-            <li><a href="/" target="_blank">分享一个炫酷利用纯CSS3实现的手风琴</a></li>
+        <div style="display: block;" class="bd bd-news">
+          <ul id="rankData">
+           <!-- <li><a href="/" target="_blank">分享一个炫酷利用纯CSS3实现的手风琴</a></li>
             <li><a href="/" target="_blank">两只蜗牛艰难又浪漫的一吻</a></li>
             <li><a href="/" target="_blank">每每接到新项目，都感觉困难，踏出</a></li>
             <li><a href="/" target="_blank">春暖花开-走走停停-发现美</a></li>
             <li><a href="/" target="_blank">Ui Parade免费的UI在线设计工具</a></li>
-            <li><a href="/" target="_blank">记得秋天吗</a></li>
+            <li><a href="/" target="_blank">记得秋天吗</a></li>-->
           </ul>
         </div>
         <div  class="bd bd-news">
-          <ul>
-            <li><a href="/" target="_blank">给我一个答案</a></li>
+          <ul id="newsData">
+           <!-- <li><a href="/" target="_blank">给我一个答案</a></li>
             <li><a href="/" target="_blank">生活是什么？</a></li>
             <li><a href="/" target="_blank">那些不是事</a></li>
             <li><a href="/" target="_blank">路·过-喜欢在路上</a></li>
             <li><a href="/" target="_blank">人生因分享,人生因分享的风景</a></li>
-            <li><a href="/" target="_blank">跟着自己的心走</a></li>
+            <li><a href="/" target="_blank">跟着自己的心走</a></li>-->
           </ul>
         </div>
         <div class="bd bd-news">
-          <ul>
-            <li><a href="/" target="_blank">人生的感悟</a></li>
+          <ul id="nominateData">
+           <!-- <li><a href="/" target="_blank">人生的感悟</a></li>
             <li><a href="/" target="_blank">分享逗逼三人游云南旅行</a></li>
             <li><a href="/" target="_blank">遇见一个未知的你</a></li>
             <li><a href="/" target="_blank">重来</a></li>
             <li><a href="/" target="_blank">简易选项卡</a></li>
-            <li><a href="/" target="_blank">中国女排3∶2险胜美国</a></li>
+            <li><a href="/" target="_blank">中国女排3∶2险胜美国</a></li>-->
           </ul>
         </div>
       </div>
