--- a/src/main/resources/templates/blog/article.html
+++ b/src/main/resources/templates/blog/article.html
@@ -17,7 +17,7 @@
 <!-- 返回顶部调用 end-->
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 </head>
-<body>
+<body id="app">
 
 <!--header-->
 <!--header-->
@@ -230,5 +230,7 @@
 <script type="text/javascript">
 swfobject.registerObject("FlashID");
 </script>
+<script src="/js/vue.js" type="text/javascript"></script>
+<script src="/js/article.js" type="text/javascript"></script>
 </body>
 </html>
