--- a/src/main/resources/templates/blog/index.html
+++ b/src/main/resources/templates/blog/index.html
@@ -33,7 +33,7 @@ body, td, th {
 <!--header--> 
 <!--header-->
 <header>
-  <div id="logo"><a href="/" title="何彪个人博客"><img src="/images/logo.png" width="260" height="100"></a></div>
+  <div id="logo"><a href="http://www.zizhuling.cn" title="何彪个人博客"><img src="/images/logo.png" width="260" height="100"></a></div>
   <nav class="topnav" id="topnav">
     <a href="/index" title="首页"><span>首页</span><span class="en"></span></a>
     <a href="/about" title="关于我"><span>关于我</span><span class="en"></span></a>
