--- a/src/main/resources/templates/blog/article.html
+++ b/src/main/resources/templates/blog/article.html
@@ -1,9 +1,9 @@
 ﻿<!doctype html>
 <html>
 <head>
-<title>生活是什么？-何彪个人博客-一个开启你记录旅行的足迹和分享途中所见所闻，与探讨互联网神秘技术的网站</title>
-<meta name="keywords" content="生活,无奈,努力,生存" />
-<meta name="description" content="生活是什么？有人说，生活生活，就是生下来活下去，也有人说，生容易，活容易，生活不容易。" />
+<title>何彪个人博客-一个开启你记录旅行的足迹和分享途中所见所闻，与探讨互联网神秘技术的网站</title>
+<meta name="keywords"  th:content="${list.gjzc}" />
+<meta name="description" th:content="${list.title}" />
 <link href="/css/base.css" rel="stylesheet">
 <link href="/css/new.css" rel="stylesheet">
 <!--[if lt IE 9]>
@@ -17,12 +17,12 @@
 <!-- 返回顶部调用 end-->
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 </head>
-<body id="app">
+<body id="app-article">
 
 <!--header-->
 <!--header-->
 <header>
-      <div id="logo"><a href="/" title="何彪个人博客"><img src="/images/logo.png" width="260" height="100"></a></div>
+      <div id="logo"><a href="http://www.zizhuling.cn" title="何彪个人博客"><img src="/images/logo.png" width="260" height="100"></a></div>
       <nav class="topnav" id="topnav">
           <a href="/index" title="首页"><span>首页</span><span class="en"></span></a>
           <a href="/about" title="关于我"><span>关于我</span><span class="en"></span></a>
@@ -39,30 +39,32 @@
 
 <article class="blogs">
   <h1 class="t_nav">
-        <span>您当前的位置：<a href='/'>首页</a> > <a href='/'>慢生活</a> > <a href='/'>享受慢活</a> > 
+        <span>您当前的位置：<a href='/index'>首页</a> > <a th:href="${list.modulepath}" th:text="${list.module}">慢生活</a> > <a href='#' th:text="${list.typename}"></a> >
         </span>
-        <a href="/" class="n1">网站首页</a>
-        <a class="n2">享受慢活</a>
+        <a href="/index" class="n1">网站首页</a>
+        <a class="n2" th:text="${list.typename}"></a>
   </h1>
   <div class="index_about">
-    <h2 class="c_titile">生活是什么？</h2>
+    <h2 class="c_titile" th:text="${list.title}"></h2>
     <p class="box_c">
-    	<span class="d_time">发布时间：2015-11-16 10:42</span>
+        <span class="d_time">发布时间：<span th:text="${list.gtmcreate}"></span></span>
         <span>编辑：何彪个人博客</span>
-        <span>互动QQ群：<a>238305367</a>
-       <span>浏览次数：<script src="/js/count.js"type='text/javascript' language="javascript"></script></span>
+        <span>互动QQ群：<a>792320700</a>
+       <span>浏览次数：<span th:text="${list.reading}"></span></span>
         </span>
     </p>
     
-    <ul class="infos">
+    <ul class="infos" th:utext=" ${list.content}">
+<!--
       <p>&nbsp;生活是什么？</p><p>有人说，生活生活，就是生下来活下去，也有人说，生容易，活容易，生活不容易。</p><p>有个朋友曾经和我说，这个世界，大多数人都没有生活，他们有的仅仅是生存。我赞同这种说法吧，只是生存，对于我们可能都是一种奢侈。每个人都在努力，努力为着这个本来不属于我们的生活和努力。对于含着金钥匙而成长的人，我们又羡慕又嫉妒。可我们没有想过，他们的先人在斩荆棘的时候，付出的艰辛和艰苦，才有了后代荣华。</p><p style="text-align: center;"><img width="657" height="447" title="生活是什么？" style="width: 657px; height: 447px;" alt="生活是什么？" src="/images/1447642096207160.png" border="0" vspace="0"/></p><p>其实在我看来，生活是一种需要，在你最需要亲人的时候，亲人已经突然不在了。子欲养而亲不待，说得成其深，对于我们是一种思考。他们的离开，对于我们都是一种打击，可也是一种思考。离开时痛苦的，可是生活就是有生老病死，当你一直都习惯存在的人已经离开的时候，慢慢地，你会看透很多，这就是你面对生活所需要的。</p><p>生活是什么？</p><p>其实在我看来，生活就是一种打拼，当过年过节的时候你看着别人的父母带着自己的孩子快乐的回家的时候、尔你还只能在大街上流浪的时候。许多游子和打工的人或许都有这种感觉吧，为了赚钱，为了养家。当我们看到留守儿童那迷茫孤寂的眼神，不由得心痛的时候，或许你能理解那份父母为了儿女在外打拼的奔波吧。</p><p>生活是什么？</p><p>其实在我看来，生活就是一种漠然，当你真正遇到困难而朋友都不能帮你的时候、怕你还不了钱的时候。你只能自己默默面对这一切，这一切让你十分无奈，可是你明白了一个道理，借给你是道理，不借给你是合理。人之常情，所以，想怪不能怪的时候，你留下的只是无奈。</p><p>生活是什么？</p><p>其实生活就是无奈的活着，不得不无奈的活着。我们活在这个世界上，为的只是寻找一个目标，而生活，给我们的感受，却是无奈与绝望的迷茫。这时候你不能说生活是美好和美满的吧？可是正因为有痛苦，无奈与悲伤，我们才有开心的日子。也正因为有了生存，才有了生活。</p><p>无奈的生活，才给我们无奈的心情，无奈的心情才有了悠然见南山的豁达与开朗，这就是生活，这种生活才会有着无限的魅力，也只有这种魅力才能吸引我们一直向前。</p>
-      
+-->
+
     </ul>
     <ul class="pagelist">
     
    </ul>
     <div class="keybq">
-    	<p><span>关键字词</span>：生活,无奈,努力,生存</p>
+    	<p><span>关键字词</span>：<span th:text="${list.gjzc}"></span></p>
     </div>
     
     <div class="ad"> </div>
@@ -81,49 +83,25 @@
  <p></p>
 	</div>
     <div class="nextinfo">
-      <p>上一篇：<a href='/'>跟着自己的心走</a> </p>
-      <p>下一篇：没有了 </p>
+      <p>上一篇：<a  th:href="@{/main/findIndexDetails.do?cid={cid}(cid=${ondata.cid})}"    th:text="${ondata.title}"    th:title="${ondata.title}"></a> </p>
+      <p>下一篇：<a  th:href="@{/main/findIndexDetails.do?cid={cid}(cid=${underData.cid})}"    th:text="${underData.title}" th:title="${underData.title}"></a> </p>
     </div>
     <div class="otherlink">
       <h2>相关文章</h2>
-      <ul>
-      
-        　　
-　　			<li><a href="/">生活是什么？</a></li>
-　　
-　　
-　　
+      <ul th:each="data : ${relatedata}">
+          <li>
+              <a  th:href="@{/main/findIndexDetails.do?cid={cid}(cid=${data.cid})}"  th:text="${data.title}" th:title="${data.title}"></a> </p>
+          </li>
+
+　　		<!--	<li><a href="/">生活是什么？</a></li>
 　　			<li><a href="/">跟着自己的心走</a></li>
-　　
-　　
-　　
 　　			<li><a href="/">只想，留住心中的那份静美</a></li>
-　　
-　　
-　　
 　　			<li><a href="/">「秋天，一次旅行」出走围城</a></li>
-　　
-　　
-　　
 　　			<li><a href="/">春游~成都九寨黄龙~清新之旅（</a></li>
-　　
-　　
-　　
 　　			<li><a href="/">思源夜景</a></li>
-　　
-　　
-　　
 　　			<li><a href="/">一个女孩的第一次人生孤旅 </a></li>
-　　
-　　
-　　
 　　			<li><a href="/">犯错了怎么办？</a></li>
-　　
-　　
-　　
-　　			<li><a href="/">两只蜗牛艰难又浪漫的一吻</a></li>
-　　
-　　
+　　			<li><a href="/">两只蜗牛艰难又浪漫的一吻</a></li>-->
 
       </ul>
     </div>
@@ -145,77 +123,56 @@
     <!--时间-->
     <div class="titm">
     	<p>即将流逝的时光，请珍惜！</p>
-  	<object id="FlashID" classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" width="260" height="90">
-      <param name="movie" value="/templets/xing1//images/flash2261.swf">
-      <param name="quality" value="high">
-      <param name="wmode" value="opaque">
-      <param name="swfversion" value="9.0.45.0">
-      <!-- 此 param 标签提示使用 Flash Player 6.0 r65 和更高版本的用户下载最新版本的 Flash Player。如果您不想让用户看到该提示，请将其删除。 -->
-      <param name="expressinstall" value="/templets/xing1/Scripts/expressInstall.swf">
-      <!-- 下一个对象标签用于非 IE 浏览器。所以使用 IECC 将其从 IE 隐藏。 -->
-      <!--[if !IE]>-->
-      <object type="application/x-shockwave-flash" data="/templets/xing1//images/flash2261.swf" width="260" height="110">
-        <!--<![endif]-->
-        <param name="quality" value="high">
-        <param name="wmode" value="opaque">
-        <param name="swfversion" value="9.0.45.0">
-        <param name="expressinstall" value="/templets/xing1/Scripts/expressInstall.swf">
-        <!-- 浏览器将以下替代内容显示给使用 Flash Player 6.0 和更低版本的用户。 -->
-        <div>
-          <h4>此页面上的内容需要较新版本的 Adobe Flash Player。</h4>
-          <p><a href="/"><img src="/images/get_flash_player.gif" alt="获取 Adobe Flash Player" /></a></p>
+        <div width="260" height="90">
+            <video src="/video/dy.mp4" height="100px" width="100%"></video>
+          <!--  <h4><video src="/video/dy.mp4" height="100px" width="100%"></video></h4>-->
+            <p><a href="/"><img src="" alt="" /></a></p>
         </div>
-        <!--[if !IE]>-->
-      </object>
-      <!--<![endif]-->
-  </object>
-</div>
+    </div>
 	
     <div class="rnav">
       <ul>
-      
             	<li class="rnav2"><a href="/">乐活空间</a></li>
-           
             	<li class="rnav2"><a href="/">闲暇时光</a></li>
-           
             	<li class="rnav2"><a href="/">享受慢活</a></li>
-           
             	<li class="rnav2"><a href="/">慢阅读</a></li>
-           
             	<li class="rnav2"><a href="/">悠客</a></li>
-           
             	<li class="rnav2"><a href="/">慢氧吧</a></li>
-           
-     </ul>      
+     </ul>
     </div>
 	<!--最新日志侧栏 列表-->
 	<div class="newbolg">
        <h2><a href="/">最新日志</a></h2>
     <ul class="rank">
-    <li><a title="生活是什么？" target="_blank" href="/">生活是什么？</a></li>
-<li><a title="那些不是事" target="_blank" href="/">那些不是事</a></li>
-<li><a title="路·过-喜欢在路上" target="_blank" href="/">路·过-喜欢在路上</a></li>
-<li><a title="人生因分享,人生因分享的风景" target="_blank" href="/">人生因分享,人生因分享的风景</a></li>
-<li><a title="跟着自己的心走" target="_blank" href="/">跟着自己的心走</a></li>
-<li><a title="只想，留住心中的那份静美" target="_blank" href="/">只想，留住心中的那份静美</a></li>
-<li><a title="走村窜寨- 一路黔行之黔东南" target="_blank" href="/">走村窜寨- 一路黔行之黔东南</a></li>
-<li><a title="人生因为有残缺，所以才会美" target="_blank" href="/">人生因为有残缺，所以才会美</a></li>
-<li><a title="分享逗逼三人游云南旅行" target="_blank" href="/">分享逗逼三人游云南旅行</a></li>
-<li><a title="「秋天，一次旅行」出走围城的所见所闻" target="_blank" href="/">「秋天，一次旅行」出走围城的所见所闻</a></li>
-     
-      </ul>   
+        <li th:each="data : ${newsdata}">
+            <a  th:href="@{/main/findIndexDetails.do?cid={cid}(cid=${data.cid})}"  th:text="${data.title}" th:title="${data.title}"></a>
+        </li>
+      <!--  <li><a title="生活是什么？" target="_blank" href="/">生活是什么？</a></li>
+        <li><a title="那些不是事" target="_blank" href="/">那些不是事</a></li>
+        <li><a title="路·过-喜欢在路上" target="_blank" href="/">路·过-喜欢在路上</a></li>
+        <li><a title="人生因分享,人生因分享的风景" target="_blank" href="/">人生因分享,人生因分享的风景</a></li>
+        <li><a title="跟着自己的心走" target="_blank" href="/">跟着自己的心走</a></li>
+        <li><a title="只想，留住心中的那份静美" target="_blank" href="/">只想，留住心中的那份静美</a></li>
+        <li><a title="走村窜寨- 一路黔行之黔东南" target="_blank" href="/">走村窜寨- 一路黔行之黔东南</a></li>
+        <li><a title="人生因为有残缺，所以才会美" target="_blank" href="/">人生因为有残缺，所以才会美</a></li>
+        <li><a title="分享逗逼三人游云南旅行" target="_blank" href="/">分享逗逼三人游云南旅行</a></li>
+        <li><a title="「秋天，一次旅行」出走围城的所见所闻" target="_blank" href="/">「秋天，一次旅行」出走围城的所见所闻</a></li>-->
+      </ul>
     </div>
 
 	<!--热评list-->
 	<div class="hotcomm">
       <h2>热门评论</h2>
      <ul>
-     	<li><a title="两只蜗牛艰难又浪漫的一吻" href="/"  target="_blank">两只蜗牛艰难又浪漫的一吻</a></li>
-<li><a title="每每接到新项目，都感觉困难，踏出第一步后，" href="/"  target="_blank">每每接到新项目，都感觉困难，踏出第一步后，</a></li>
-<li><a title="春暖花开-走走停停-发现美" href="/"  target="_blank">春暖花开-走走停停-发现美</a></li>
-<li><a title="记得秋天吗" href="/"  target="_blank">记得秋天吗</a></li>
-<li><a title="Ui Parade免费的UI在线设计工具" href="/"  target="_blank">Ui Parade免费的UI在线设计工具</a></li>
-<li><a title="教你几招高度伪原创软文的方法！" href="/"  target="_blank">教你几招高度伪原创软文的方法！</a></li>
+         <li th:each="data : ${rankdata}">
+             <a  th:href="@{/main/findIndexDetails.do?cid={cid}(cid=${data.cid})}"  th:text="${data.title}" th:title="${data.title}"></a>
+         </li>
+     	<!--<li><a title="两只蜗牛艰难又浪漫的一吻" href="/"  target="_blank">两只蜗牛艰难又浪漫的一吻</a></li>
+        <li><a title="每每接到新项目，都感觉困难，踏出第一步后，" href="/"  target="_blank">每每接到新项目，都感觉困难，踏出第一步后，</a></li>
+        <li><a title="春暖花开-走走停停-发现美" href="/"  target="_blank">春暖花开-走走停停-发现美</a></li>
+        <li><a title="记得秋天吗" href="/"  target="_blank">记得秋天吗</a></li>
+        <li><a title="Ui Parade免费的UI在线设计工具" href="/"  target="_blank">Ui Parade免费的UI在线设计工具</a></li>
+        <li><a title="教你几招高度伪原创软文的方法！" href="/"  target="_blank">教你几招高度伪原创软文的方法！</a></li>-->
 
      </ul>    
     </div>
