--- a/src/main/resources/static/css/learn.css
+++ b/src/main/resources/static/css/learn.css
@@ -273,8 +273,8 @@ img {
 	border-radius: 0px;
 }
 .bdcs-container .bdcs-search-form-submit {
-	*height:30px: ;
-	*margin-top:1px: ;
+	*height:30px ;
+	*margin-top:1px ;
 }
 .bdcs-container .bdcs-search-form-submit {
 	line-height: 28px;
