--- a/src/main/resources/templates/blog/index.html
+++ b/src/main/resources/templates/blog/index.html
@@ -198,10 +198,10 @@ body, td, th {
       <h3>关注我</h3>
       <div class="gzwm">
         <ul>
-          <li><a class="xlwb" href="/" target="_blank">新浪微博</a></li>
-          <li><a class="txwb" href="/" target="_blank">腾讯微博</a></li>
-          <li><a class="rss" href="/" target="_blank">RSS</a></li>
-          <li><a class="wx" href="/">邮箱</a></li>
+          <li><a class="xlwb" href="https://weibo.com/u/5863925408?refer_flag=1001030103_&is_all=1" target="_blank">新浪微博</a></li>
+          <li><a class="txwb" href="http://t.qq.com/HB1169763240" target="_blank">腾讯微博</a></li>
+          <li><a class="rss" href="https://www.inoreader.com/folder/Lifestyle" target="_blank">RSS</a></li>
+          <li><a class="wx" href="http://mail.qq.com/cgi-bin/qm_share?t=qm_mailme&email=1169763240@qq.com" target="_blank">邮箱</a></li>
         </ul>
       </div>
     </div>
