--- a/src/main/resources/templates/blog/life_article.html
+++ b/src/main/resources/templates/blog/life_article.html
@@ -17,7 +17,7 @@
 <!-- 返回顶部调用 end-->
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 </head>
-<body>
+<body id="app-article">
 
 <!--header-->
 <!--header-->
@@ -88,8 +88,8 @@
     </div>
     <div class="otherlink">
       <h2>相关文章</h2>
-      <ul>
-          <li th:each="data : ${relatedata}">
+      <ul th:each="data : ${relatedata}">
+          <li>
               <a  th:href="@{/main/findIndexDetails.do?cid={cid}(cid=${data.cid})}"  th:text="${data.title}" th:title="${data.title}"></a> </p>
           </li>
 
@@ -187,6 +187,7 @@
 <script type="text/javascript">
 swfobject.registerObject("FlashID");
 </script>
+<script src="/js/vue.js" type="text/javascript"></script>
 <script src="/js/article.js" type="text/javascript"></script>
 </body>
 </html>
