--- a/src/main/resources/templates/blog/tags.html
+++ b/src/main/resources/templates/blog/tags.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>-何彪个人博客-一个开启你记录旅行的足迹和分享途中所见所闻，与探讨互联网神秘技术的网站</title>
-<meta name="keywords" content="罗俊杰个人博客" />
+<meta name="keywords" content="何彪个人博客" />
 <meta name="description" content="" />
 <link href="/css/base.css" rel="stylesheet">
 <link href="/css/new.css" rel="stylesheet">
@@ -35,7 +35,7 @@ s.parentNode.insertBefore(hm, s);
 <!--header-->
 <!--header-->
 <header>
-      <div id="logo"><a href="/" title="何彪个人博客"><img src="/images/logo.png" width="260" height="100"></a></div>
+      <div id="logo"><a href="http://www.zizhuling.cn" title="何彪个人博客"><img src="/images/logo.png" width="260" height="100"></a></div>
       <nav class="topnav" id="topnav">
 		  <a href="/index" title="首页"><span>首页</span><span class="en"></span></a>
 		  <a href="/about" title="关于我"><span>关于我</span><span class="en"></span></a>
@@ -52,16 +52,16 @@ s.parentNode.insertBefore(hm, s);
 
 <article class="blogs">
   <h1 class="t_nav">
-        <span>您当前的位置：<a href="/">主页</a> &gt; TAG标签
+        <span>您当前的位置：<a href="/index">首页</a> &gt; TAG标签
         </span>
-        <a href="/" class="n1">网站首页</a>
+        <a href="/index" class="n1">网站首页</a>
         <a class="n2">日记</a>
   </h1>
   <div class="index_about">
     <h2 class="c_titile">全部TAG标签</h2>
     <p class="box_c">
-    	<span class="d_time">更新时间于：</span>
-        <span>编辑：admin</span>
+    	<span class="d_time">更新时间于：2018-12-30</span>
+        <span>编辑：何彪</span>
         <span>互动QQ群：<a>792320700</a>
         </span>
     </p>
@@ -404,7 +404,7 @@ s.parentNode.insertBefore(hm, s);
  
 <a href="/" target="_blank" style="color:">旅游</a>
  
-<a href="/" target="_blank" style="color:">罗俊杰个人博客</a>
+<a href="/" target="_blank" style="color:">何彪个人博客</a>
  
 <a href="/" target="_blank" style="color:">htm5</a>
  
@@ -610,7 +610,7 @@ s.parentNode.insertBefore(hm, s);
             
             	<li><a href='/' class='tagc1'>个人博客网站</a></li>
             
-            	<li><a href='/' class='tagc1'>罗俊杰个人博客</a></li>
+            	<li><a href='/' class='tagc1'>何彪个人博客</a></li>
             
             	<li><a href='/' class='tagc2'>模拟器</a></li>
             
@@ -864,49 +864,20 @@ s.parentNode.insertBefore(hm, s);
     </div>
     <div class="otherlink">
       <h2>推荐文章</h2>
-      <ul>
-      
-        　　
-　　			<li><a href="/">给我一个答案</a></li>
-　　
-　　
-　　
+      <ul>　　
+		  <li th:each="data : ${recommenddata}">
+			  <a  th:href="@{/main/findIndexDetails.do?cid={cid}(cid=${data.cid})}"  th:text="${data.title}" th:title="${data.title}"></a>
+		  </li>
+　　		<!--	<li><a href="/">给我一个答案</a></li>
 　　			<li><a href="/">生活是什么？</a></li>
-　　
-　　
-　　
 　　			<li><a href="/">那些不是事</a></li>
-　　
-　　
-　　
 　　			<li><a href="/">路·过-喜欢在路上</a></li>
-　　
-　　
-　　
 　　			<li><a href="/">人生因分享,人生因分享的风景</a></li>
-　　
-　　
-　　
 　　			<li><a href="/">跟着自己的心走</a></li>
-　　
-　　
-　　
 　　			<li><a href="/">只想，留住心中的那份静美</a></li>
-　　
-　　
-　　
 　　			<li><a href="/">走村窜寨- 一路黔行之黔东南</a></li>
-　　
-　　
-　　
 　　			<li><a href="/">人生因为有残缺，所以才会美</a></li>
-　　
-　　
-　　
-　　			<li><a href="/">分享逗逼三人游云南旅行</a></li>
-　　
-　　
-
+　　			<li><a href="/">分享逗逼三人游云南旅行</a></li>-->
       </ul>
     </div>
   </div>
@@ -916,57 +887,41 @@ s.parentNode.insertBefore(hm, s);
       <h3>关注我</h3>
       <div class="gzwm">
         <ul>
-          	<li><a class="xlwb" href="/" target="_blank">新浪微博</a></li>
-          	<li><a class="txwb" href="/" target="_blank">腾讯微博</a></li>
-          	<li><a class="rss" href="/" target="_blank">RSS</a></li>
-          	<li><a class="wx" href="/">邮箱</a></li>
-        </ul>
+			<li><a class="xlwb" href="https://weibo.com/u/5863925408?refer_flag=1001030103_&is_all=1" target="_blank">新浪微博</a></li>
+			<li><a class="txwb" href="http://t.qq.com/HB1169763240" target="_blank">腾讯微博</a></li>
+			<li><a class="rss" href="https://www.inoreader.com/folder/Lifestyle" target="_blank">RSS</a></li>
+			<li><a class="wx" href="http://mail.qq.com/cgi-bin/qm_share?t=qm_mailme&email=1169763240@qq.com" target="_blank">邮箱</a></li>
+		</ul>
       </div>
     </div>
     
     <!--天气-->
     <div class="titm">
     	<p>即将流逝的时光，请珍惜！</p>
-  <object id="FlashID" classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" width="260" height="90">
-      <param name="movie" value="/templets/xing1//images/flash2261.swf">
-      <param name="quality" value="high">
-      <param name="wmode" value="opaque">
-      <param name="swfversion" value="9.0.45.0">
-      <!-- 此 param 标签提示使用 Flash Player 6.0 r65 和更高版本的用户下载最新版本的 Flash Player。如果您不想让用户看到该提示，请将其删除。 -->
-      <param name="expressinstall" value="/templets/xing1/Scripts/expressInstall.swf">
-      <!-- 下一个对象标签用于非 IE 浏览器。所以使用 IECC 将其从 IE 隐藏。 -->
-      <!--[if !IE]>-->
-      <object type="application/x-shockwave-flash" data="/templets/xing1//images/flash2261.swf" width="260" height="110">
-        <!--<![endif]-->
-        <param name="quality" value="high">
-        <param name="wmode" value="opaque">
-        <param name="swfversion" value="9.0.45.0">
-        <param name="expressinstall" value="/templets/xing1/Scripts/expressInstall.swf">
-        <!-- 浏览器将以下替代内容显示给使用 Flash Player 6.0 和更低版本的用户。 -->
-        <div>
-          <h4>此页面上的内容需要较新版本的 Adobe Flash Player。</h4>
-          <p><a href="/"><img src="/images/get_flash_player.gif" alt="获取 Adobe Flash Player" /></a></p>
-        </div>
-        <!--[if !IE]>-->
-      </object>
-      <!--<![endif]-->
-  </object>
+		<div width="260" height="90">
+			<video src="/video/dy.mp4" height="100px" width="100%"></video>
+			<!--  <h4><video src="/video/dy.mp4" height="100px" width="100%"></video></h4>-->
+			<p><a href="/"><img src="" alt="" /></a></p>
+		</div>
  </div>
 	<!--最新日志侧栏 列表-->
 	<div class="newbolg">
        <h2><a href="/">最新日志</a></h2>
     <ul class="rank">
-    <li><a title="生活是什么？" target="_blank" href="/">生活是什么？</a></li>
-<li><a title="那些不是事" target="_blank" href="/">那些不是事</a></li>
-<li><a title="路·过-喜欢在路上" target="_blank" href="/">路·过-喜欢在路上</a></li>
-<li><a title="人生因分享,人生因分享的风景" target="_blank" href="/">人生因分享,人生因分享的风景</a></li>
-<li><a title="跟着自己的心走" target="_blank" href="/">跟着自己的心走</a></li>
-<li><a title="只想，留住心中的那份静美" target="_blank" href="/">只想，留住心中的那份静美</a></li>
-<li><a title="走村窜寨- 一路黔行之黔东南" target="_blank" href="/">走村窜寨- 一路黔行之黔东南</a></li>
-<li><a title="人生因为有残缺，所以才会美" target="_blank" href="/">人生因为有残缺，所以才会美</a></li>
-<li><a title="分享逗逼三人游云南旅行" target="_blank" href="/">分享逗逼三人游云南旅行</a></li>
-<li><a title="「秋天，一次旅行」出走围城的所见所闻" target="_blank" href="/">「秋天，一次旅行」出走围城的所见所闻</a></li>
-     
+		<li th:each="data : ${newsdata}">
+			<a  th:href="@{/main/findIndexDetails.do?cid={cid}(cid=${data.cid})}"  th:text="${data.title}" th:title="${data.title}"></a>
+		</li>
+		<!--<li><a title="生活是什么？" target="_blank" href="/">生活是什么？</a></li>
+		<li><a title="那些不是事" target="_blank" href="/">那些不是事</a></li>
+		<li><a title="路·过-喜欢在路上" target="_blank" href="/">路·过-喜欢在路上</a></li>
+		<li><a title="人生因分享,人生因分享的风景" target="_blank" href="/">人生因分享,人生因分享的风景</a></li>
+		<li><a title="跟着自己的心走" target="_blank" href="/">跟着自己的心走</a></li>
+		<li><a title="只想，留住心中的那份静美" target="_blank" href="/">只想，留住心中的那份静美</a></li>
+		<li><a title="走村窜寨- 一路黔行之黔东南" target="_blank" href="/">走村窜寨- 一路黔行之黔东南</a></li>
+		<li><a title="人生因为有残缺，所以才会美" target="_blank" href="/">人生因为有残缺，所以才会美</a></li>
+		<li><a title="分享逗逼三人游云南旅行" target="_blank" href="/">分享逗逼三人游云南旅行</a></li>
+		<li><a title="「秋天，一次旅行」出走围城的所见所闻" target="_blank" href="/">「秋天，一次旅行」出走围城的所见所闻</a></li>-->
+
       </ul>   
     </div>
 
@@ -974,13 +929,16 @@ s.parentNode.insertBefore(hm, s);
 	<div class="hotcomm">
       <h2>热门评论</h2>
      <ul>
-     	<li><a title="两只蜗牛艰难又浪漫的一吻" href="/"  target="_blank">两只蜗牛艰难又浪漫的一吻</a></li>
-<li><a title="每每接到新项目，都感觉困难，踏出第一步后，" href="/"  target="_blank">每每接到新项目，都感觉困难，踏出第一步后，</a></li>
-<li><a title="春暖花开-走走停停-发现美" href="/"  target="_blank">春暖花开-走走停停-发现美</a></li>
-<li><a title="Ui Parade免费的UI在线设计工具" href="/"  target="_blank">Ui Parade免费的UI在线设计工具</a></li>
-<li><a title="记得秋天吗" href="/"  target="_blank">记得秋天吗</a></li>
-<li><a title="教你几招高度伪原创软文的方法！" href="/"  target="_blank">教你几招高度伪原创软文的方法！</a></li>
-
+		 <li th:each="data : ${rankdata}">
+			 <a  th:href="@{/main/findIndexDetails.do?cid={cid}(cid=${data.cid})}"  th:text="${data.title}" th:title="${data.title}"></a>
+		 </li>
+     <!--	<li><a title="两只蜗牛艰难又浪漫的一吻" href="/"  target="_blank">两只蜗牛艰难又浪漫的一吻</a></li>
+		<li><a title="每每接到新项目，都感觉困难，踏出第一步后，" href="/"  target="_blank">每每接到新项目，都感觉困难，踏出第一步后，</a></li>
+		<li><a title="春暖花开-走走停停-发现美" href="/"  target="_blank">春暖花开-走走停停-发现美</a></li>
+		<li><a title="Ui Parade免费的UI在线设计工具" href="/"  target="_blank">Ui Parade免费的UI在线设计工具</a></li>
+		<li><a title="记得秋天吗" href="/"  target="_blank">记得秋天吗</a></li>
+		<li><a title="教你几招高度伪原创软文的方法！" href="/"  target="_blank">教你几招高度伪原创软文的方法！</a></li>
+	-->
      </ul>    
     </div>
     <div class="share">
