--- a/src/main/resources/templates/blog/life_article.html
+++ b/src/main/resources/templates/blog/life_article.html
@@ -39,7 +39,7 @@
 
 <article class="blogs">
   <h1 class="t_nav">
-        <span>您当前的位置：<a href='/index'>首页</a> > <a th:href="${list.modulepath}" th:text="${list.module}">慢生活</a> > <a href='#' th:text="${list.typename}"></a> >
+        <span>您当前的位置：<a href='/index'>首页</a> > <a href="/life">慢生活</a> > <a href='#' th:text="${list.typename}"></a> >
         </span>
         <a href="/index" class="n1">网站首页</a>
         <a class="n2" th:text="${list.typename}"></a>
@@ -48,7 +48,7 @@
     <h2 class="c_titile" th:text="${list.title}"></h2>
     <p class="box_c">
         <span class="d_time">发布时间：<span th:text="${list.gtmcreate}"></span></span>
-        <span>编辑：何彪个人博客</span>
+        <span>编辑：<span th:text="${list.author}"></span>个人博客</span>
         <span>互动QQ群：<a>792320700</a>
        <span>浏览次数：<span th:text="${list.reading}"></span></span>
         </span>
@@ -83,28 +83,30 @@
  <p></p>
 	</div>
     <div class="nextinfo">
-      <p>上一篇：<a  th:href="@{/main/findIndexDetails.do?cid={cid}(cid=${ondata.cid})}"    th:text="${ondata.title}"    th:title="${ondata.title}"></a> </p>
-      <p>下一篇：<a  th:href="@{/main/findIndexDetails.do?cid={cid}(cid=${underData.cid})}"    th:text="${underData.title}" th:title="${underData.title}"></a> </p>
+      <p>上一篇：<a  th:href="@{/main/findlifeDetails.do?cid={cid}(cid=${ondata.cid})}"    th:text="${ondata.title}"    th:title="${ondata.title}"></a> </p>
+      <p>下一篇：<a  th:href="@{/main/findlifeDetails.do?cid={cid}(cid=${underData.cid})}"    th:text="${underData.title}" th:title="${underData.title}"></a> </p>
     </div>
     <div class="otherlink">
       <h2>相关文章</h2>
-      <ul th:each="data : ${relatedata}">
-          <li>
-              <a  th:href="@{/main/findIndexDetails.do?cid={cid}(cid=${data.cid})}"  th:text="${data.title}" th:title="${data.title}"></a> </p>
+      <ul>
+          <li th:each="data : ${relatedata}">
+              <a  th:href="@{/main/findlifeDetails.do?cid={cid}(cid=${data.cid})}"  th:text="${data.title}" th:title="${data.title}"></a> </p>
           </li>
-
-　　		<!--	<li><a href="/">生活是什么？</a></li>
-　　			<li><a href="/">跟着自己的心走</a></li>
-　　			<li><a href="/">只想，留住心中的那份静美</a></li>
-　　			<li><a href="/">「秋天，一次旅行」出走围城</a></li>
-　　			<li><a href="/">春游~成都九寨黄龙~清新之旅（</a></li>
-　　			<li><a href="/">思源夜景</a></li>
-　　			<li><a href="/">一个女孩的第一次人生孤旅 </a></li>
-　　			<li><a href="/">犯错了怎么办？</a></li>
-　　			<li><a href="/">两只蜗牛艰难又浪漫的一吻</a></li>-->
-
       </ul>
     </div>
+      <!--添加评论-->
+      <div class="tit01" style="width: 100%;clear: both;overflow: hidden; overflow-x: hidden; overflow-y: hidden;">
+          <h3>文章评论</h3>
+          <!--PC版-->
+          <div id="SOHUCS" sid="<#article/id#>" ></div>
+      </div>
+      <script charset="utf-8" type="text/javascript" src="https://changyan.sohu.com/upload/changyan.js" ></script>
+      <script type="text/javascript">
+          window.changyan.api.config({
+              appid: 'cytKzYNfj',
+              conf: 'prod_07cc58b4a84c0ffab71eb1ca6cc6c9a4'
+          });
+      </script>
   </div>
 
   <aside class="right">
@@ -124,7 +126,7 @@
     <div class="titm">
     	<p>即将流逝的时光，请珍惜！</p>
         <div width="260" height="90">
-            <video src="/video/dy.mp4" height="100px" width="100%"></video>
+            <iframe src="//player.bilibili.com/player.html?aid=31639524&cid=55327425&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
           <!--  <h4><video src="/video/dy.mp4" height="100px" width="100%"></video></h4>-->
             <p><a href="/"><img src="" alt="" /></a></p>
         </div>
@@ -132,12 +134,12 @@
 	
     <div class="rnav">
       <ul>
-            	<li class="rnav2"><a href="/">乐活空间</a></li>
-            	<li class="rnav2"><a href="/">闲暇时光</a></li>
-            	<li class="rnav2"><a href="/">享受慢活</a></li>
-            	<li class="rnav2"><a href="/">慢阅读</a></li>
-            	<li class="rnav2"><a href="/">悠客</a></li>
-            	<li class="rnav2"><a href="/">慢氧吧</a></li>
+            	<li class="rnav2"><a href="/life">乐活空间</a></li>
+            	<li class="rnav2"><a href="/life">闲暇时光</a></li>
+            	<li class="rnav2"><a href="/life">享受慢活</a></li>
+            	<li class="rnav2"><a href="/life">慢阅读</a></li>
+            	<li class="rnav2"><a href="/life">悠客</a></li>
+            	<li class="rnav2"><a href="/life">慢氧吧</a></li>
      </ul>
     </div>
 	<!--最新日志侧栏 列表-->
@@ -145,18 +147,8 @@
        <h2><a href="/">最新日志</a></h2>
     <ul class="rank">
         <li th:each="data : ${newsdata}">
-            <a  th:href="@{/main/findIndexDetails.do?cid={cid}(cid=${data.cid})}"  th:text="${data.title}" th:title="${data.title}"></a>
+            <a  th:href="@{/main/findlifeDetails.do?cid={cid}(cid=${data.cid})}"  th:text="${data.title}" th:title="${data.title}"></a>
         </li>
-      <!--  <li><a title="生活是什么？" target="_blank" href="/">生活是什么？</a></li>
-        <li><a title="那些不是事" target="_blank" href="/">那些不是事</a></li>
-        <li><a title="路·过-喜欢在路上" target="_blank" href="/">路·过-喜欢在路上</a></li>
-        <li><a title="人生因分享,人生因分享的风景" target="_blank" href="/">人生因分享,人生因分享的风景</a></li>
-        <li><a title="跟着自己的心走" target="_blank" href="/">跟着自己的心走</a></li>
-        <li><a title="只想，留住心中的那份静美" target="_blank" href="/">只想，留住心中的那份静美</a></li>
-        <li><a title="走村窜寨- 一路黔行之黔东南" target="_blank" href="/">走村窜寨- 一路黔行之黔东南</a></li>
-        <li><a title="人生因为有残缺，所以才会美" target="_blank" href="/">人生因为有残缺，所以才会美</a></li>
-        <li><a title="分享逗逼三人游云南旅行" target="_blank" href="/">分享逗逼三人游云南旅行</a></li>
-        <li><a title="「秋天，一次旅行」出走围城的所见所闻" target="_blank" href="/">「秋天，一次旅行」出走围城的所见所闻</a></li>-->
       </ul>
     </div>
 
@@ -165,16 +157,9 @@
       <h2>热门评论</h2>
      <ul>
          <li th:each="data : ${rankdata}">
-             <a  th:href="@{/main/findIndexDetails.do?cid={cid}(cid=${data.cid})}"  th:text="${data.title}" th:title="${data.title}"></a>
+             <a  th:href="@{/main/findlifeDetails.do?cid={cid}(cid=${data.cid})}"  th:text="${data.title}" th:title="${data.title}"></a>
          </li>
-     	<!--<li><a title="两只蜗牛艰难又浪漫的一吻" href="/"  target="_blank">两只蜗牛艰难又浪漫的一吻</a></li>
-        <li><a title="每每接到新项目，都感觉困难，踏出第一步后，" href="/"  target="_blank">每每接到新项目，都感觉困难，踏出第一步后，</a></li>
-        <li><a title="春暖花开-走走停停-发现美" href="/"  target="_blank">春暖花开-走走停停-发现美</a></li>
-        <li><a title="记得秋天吗" href="/"  target="_blank">记得秋天吗</a></li>
-        <li><a title="Ui Parade免费的UI在线设计工具" href="/"  target="_blank">Ui Parade免费的UI在线设计工具</a></li>
-        <li><a title="教你几招高度伪原创软文的方法！" href="/"  target="_blank">教你几招高度伪原创软文的方法！</a></li>-->
-
-     </ul>    
+     </ul>
     </div>
     
   </aside>
