--- a/src/main/resources/templates/blog/index.html
+++ b/src/main/resources/templates/blog/index.html
@@ -278,36 +278,36 @@ window.onload = function ()
     <div class="cloud">
       <h3>标签云<a href="/tags">更多>></a></h3>
       <ul>
-        <li><a href='/' class='tagc1'>摄影</a></li>
-        <li><a href='/' class='tagc1'>认识</a></li>
-        <li><a href='/' class='tagc2'>2014</a></li>
-        <li><a href='/' class='tagc1'>热情</a></li>
-        <li><a href='/' class='tagc1'>阴影</a></li>
-        <li><a href='/' class='tagc2'>网站</a></li>
-        <li><a href='/' class='tagc2'>方式</a></li>
-        <li><a href='/' class='tagc2'>百度搜索技巧</a></li>
-        <li><a href='/' class='tagc1'>寂寞</a></li>
-        <li><a href='/' class='tagc1'>昔日</a></li>
-        <li><a href='/' class='tagc2'>年轻人</a></li>
-        <li><a href='/' class='tagc1'>时隔</a></li>
-        <li><a href='/' class='tagc2'>CSS3手风琴</a></li>
-        <li><a href='/' class='tagc2'>因为</a></li>
-        <li><a href='/' class='tagc1'>困难</a></li>
-        <li><a href='/' class='tagc1'>秋天</a></li>
-        <li><a href='/' class='tagc2'>草根</a></li>
-        <li><a href='/' class='tagc1'>主题</a></li>
-        <li><a href='/' class='tagc2'>感觉</a></li>
-        <li><a href='/' class='tagc2'>伪原创的技巧</a></li>
-        <li><a href='/' class='tagc2'>踏出</a></li>
-        <li><a href='/' class='tagc1'>dede缩</a></li>
-        <li><a href='/' class='tagc1'>U盘启动制作</a></li>
-        <li><a href='/' class='tagc2'>川西故事</a></li>
-        <li><a href='/' class='tagc1'>钢琴曲</a></li>
-        <li><a href='/' class='tagc1'>CSS</a></li>
-        <li><a href='/' class='tagc1'>技术</a></li>
-        <li><a href='/' class='tagc1'>初遇时</a></li>
-        <li><a href='/' class='tagc2'>爱的家</a></li>
-        <li><a href='/' class='tagc1'>中国队</a></li>
+        <li><a href='/tags' class='tagc1'>摄影</a></li>
+        <li><a href='/tags' class='tagc1'>认识</a></li>
+        <li><a href='/tags' class='tagc2'>2014</a></li>
+        <li><a href='/tags' class='tagc1'>热情</a></li>
+        <li><a href='/tags' class='tagc1'>阴影</a></li>
+        <li><a href='/tags' class='tagc2'>网站</a></li>
+        <li><a href='/tags' class='tagc2'>方式</a></li>
+        <li><a href='/tags' class='tagc2'>百度搜索技巧</a></li>
+        <li><a href='/tags' class='tagc1'>寂寞</a></li>
+        <li><a href='/tags' class='tagc1'>昔日</a></li>
+        <li><a href='/tags' class='tagc2'>年轻人</a></li>
+        <li><a href='/tags' class='tagc1'>时隔</a></li>
+        <li><a href='/tags' class='tagc2'>CSS3手风琴</a></li>
+        <li><a href='/tags' class='tagc2'>因为</a></li>
+        <li><a href='/tags' class='tagc1'>困难</a></li>
+        <li><a href='/tags' class='tagc1'>秋天</a></li>
+        <li><a href='/tags' class='tagc2'>草根</a></li>
+        <li><a href='/tags' class='tagc1'>主题</a></li>
+        <li><a href='/tags' class='tagc2'>感觉</a></li>
+        <li><a href='/tags' class='tagc2'>伪原创的技巧</a></li>
+        <li><a href='/tags' class='tagc2'>踏出</a></li>
+        <li><a href='/tags' class='tagc1'>dede缩</a></li>
+        <li><a href='/tags' class='tagc1'>U盘启动制作</a></li>
+        <li><a href='/tags' class='tagc2'>川西故事</a></li>
+        <li><a href='/tags' class='tagc1'>钢琴曲</a></li>
+        <li><a href='/tags' class='tagc1'>CSS</a></li>
+        <li><a href='/tags' class='tagc1'>技术</a></li>
+        <li><a href='/tags' class='tagc1'>初遇时</a></li>
+        <li><a href='/tags' class='tagc2'>爱的家</a></li>
+        <li><a href='/tags' class='tagc1'>中国队</a></li>
       </ul>
     </div>
     <!--<div class="tuwen">
@@ -366,7 +366,6 @@ window.onload = function ()
 <script type="text/javascript">
 swfobject.registerObject("FlashID");
 </script>
-<script src="/js/vue.js" type="text/javascript"></script>
 <script src="/js/index.js" type="text/javascript"></script>
 </body>
 </html>
