--- a/src/main/resources/templates/blog/doing.html
+++ b/src/main/resources/templates/blog/doing.html
@@ -2,10 +2,12 @@
 <html>
 <head>
 <title>忙里偷闲-何彪个人博客-一个开启你记录旅行的足迹和分享途中所见所闻，与探讨互联网神秘技术的网站</title>
-<meta name="keywords" content="何彪个人博客,分享旅行,喜欢在路上,旅游,慢生活,所见所闻,千奇百怪,罗俊杰个人博客博客" />
+<meta name="keywords" content="何彪个人博客,分享旅行,喜欢在路上,旅游,慢生活,所见所闻,千奇百怪,何彪个人博客博客" />
 <meta name="description" content="一个关注旅行，在路上寻找那个丢失自我，远离城市的喧哗，放慢脚步去享受慢生活，分享在路上所见所闻，与大家一起发现这世界的千奇百怪！" />
 <link href="/css/base.css" rel="stylesheet">
 <link href="/css/mood.css" rel="stylesheet">
+<!--<link href="/css/bootstrap.min.css"  rel="stylesheet">-->
+
 <!--[if lt IE 9]>
 <![endif]--><script src="/js/modernizr.js"></script>
 <!-- 返回顶部调用 begin -->
@@ -30,7 +32,7 @@ s.parentNode.insertBefore(hm, s);
 <body>
 <!--header-->
 <header>
-      <div id="logo"><a href="/" title="何彪个人博客"><img src="/images/logo.png" width="260" height="100"></a></div>
+      <div id="logo"><a href="http://www.zizhuling.cn" title="何彪个人博客"><img src="/images/logo.png" width="260" height="100"></a></div>
       <nav class="topnav" id="topnav">
           <a href="/index" title="首页"><span>首页</span><span class="en"></span></a>
           <a href="/about" title="关于我"><span>关于我</span><span class="en"></span></a>
@@ -50,24 +52,27 @@ s.parentNode.insertBefore(hm, s);
     <a href="/" title="忙里偷闲" class="n2">忙里偷闲</a>
   </h1>
   <div class="motto">
- <p>有时候不是我不理你，其实我也想你了，只是我不知道该对你说什么。不管过去如何，过去的已经过去，最好的总在未来等着你。当我们懂得珍惜平凡的幸福的时候，就已经成了人生的赢家。<b>Nothing is as sweet as you</b> 再没什么，能甜蜜如你。我以为只要很认真的喜欢就能打动一个人，到后来，却只打动了我自己。</p>
-  <ul class="inbar">
-  	<li><a target="_blank"><img src="/images/1434882856126573-lp.jpg"></a></li>
-<li><a target="_blank"><img src="/images/1433940740595775.jpg"></a></li>
-<li><a target="_blank"><img src="/images/1433940796115953.jpg"></a></li>
+      <p>有时候不是我不理你，其实我也想你了，只是我不知道该对你说什么。不管过去如何，过去的已经过去，最好的总在未来等着你。当我们懂得珍惜平凡的幸福的时候，就已经成了人生的赢家。<b>Nothing is as sweet as you</b> 再没什么，能甜蜜如你。我以为只要很认真的喜欢就能打动一个人，到后来，却只打动了我自己。</p>
+      <ul class="inbar">
+        <li><a target="_blank"><img src="/images/1434882856126573-lp.jpg"></a></li>
+        <li><a target="_blank"><img src="/images/1433940740595775.jpg"></a></li>
+        <li><a target="_blank"><img src="/images/1433940796115953.jpg"></a></li>
+      </ul>
+  </div>
 
-  </ul>
-</div>
-<div class="ccenter"> 
+<div class="ccenter" id="app-doing">
 <div class="bloglist">
+      <!--  <blog-doing v-for="data in dataList" v-bind:data="data" v-bind:key="data.cid"></blog-doing>-->
+   <template v-for="data in dataList">
 		<ul class="arrow_box">
                 <div class="sy">
-                    <p>
-                        <p>&nbsp;人生，总让人无语，笑的时候，不一定开心，也许是一种无奈；哭的时候，不一定流泪，也许是一种释放；痛的时候，不一定受伤，也许是一种心动。走过一段路，总想看到一道风景，因为已经刻骨铭心；想起一个人，总会流泪，因为已经融入生命；唱起一首歌，总会沉默，因为已经难以释怀。风雨人生，淡然在心。</p>
+                    <p v-html="data.content">
                     </p>
                 </div>
-                <span class="dateview">2015-07-21</span>
-            </ul>
+                <span class="dateview">{{data.gtmcreate}}</span>
+        </ul>
+   </template>
+<!--
 <ul class="arrow_box">
                 <div class="sy">
                     <p>
@@ -76,6 +81,8 @@ s.parentNode.insertBefore(hm, s);
                 </div>
                 <span class="dateview">2015-07-21</span>
             </ul>
+
+
 <ul class="arrow_box">
                 <div class="sy">
                     <p>
@@ -84,130 +91,39 @@ s.parentNode.insertBefore(hm, s);
                 </div>
                 <span class="dateview">2015-07-18</span>
             </ul>
-<ul class="arrow_box">
-                <div class="sy">
-                    <p>
-                        <p>&nbsp;朋友问我要几首<span id="9_nwp" style="width: auto; height: auto; float: none;"><a id="9_nwl" style="text-decoration: none;" href="/" target="_blank" mpid="9"><span style="width: auto; height: auto; color: rgb(0, 0, 255); font-size: 12px; float: none;">舒缓</span></a></span>心情的歌曲，我就向他推荐了一首日本西村由纪江的钢琴曲《Tegami》，他问我为什么那么喜欢日本的歌曲，我说“这就好比喜欢一个人一样，也许你只喜欢他一个优点就够了，何必还在意其他的缺点呢”</p>
-                    </p>
-                </div>
-                <span class="dateview">2015-07-18</span>
-            </ul>
-<ul class="arrow_box">
-                <div class="sy">
-                    <p>
-                        <p>过去的阴影</p><p>　　失望的曾经</p><p>　　我的世界是那么惨淡冷清</p><p>　　谁能打破昨日的静</p><p>　　谁能遗忘往事的情</p><p>　　最好的方式</p><p>　　是不是了却自己的生命</p><p>　　忧虑难定</p><p>　　是否答应</p><p>　　重来自己的生命</p><p>　　聆听</p><p>　　来自未来的光明</p><p>　　是否答应</p><p>　　憧憬未来的风景</p><p>　　描绘</p><p>　　属于自己的宁静</p><p>&nbsp;</p>
-                    </p>
-                </div>
-                <span class="dateview">2015-07-17</span>
-            </ul>
-<ul class="arrow_box">
-                <div class="sy">
-                    <p>
-                        <p>身边的同学都说我很坚强，其实我并非有那么坚强，有时候我也会堕落。</p><p>&nbsp;&nbsp;&nbsp; 就好比前段时间，堕落中弥漫着迷茫，成绩也有所退步我总把自己关在忧郁的世界里，不愿接触这个残酷的世界…我总把自己沉浸在以往的悲伤中…我深知我会一步步把自己逼向悬崖，可我还是选择了堕落…</p><p>&nbsp;&nbsp;&nbsp; 其实很多时候我是羡慕你们的，有一个幸福的家庭，有一个暖暖的港湾，有一个给予你们关怀，时刻牵挂着你们的爸妈。其实曾经我也有过</p><p>&nbsp;&nbsp;&nbsp; 在我心里，我并不是一个好孩子，我总迫切地渴望得到家人的关怀;也许每一个孩子都会想得到来自家人的关心与问候。可是我用错了方式…我为了能引起他们的注意而任性的折磨自己的身体，总会逃避吃饭…我知道，委屈的是自己的身体，可我还是任性了…</p><p>&nbsp;&nbsp;&nbsp; 其实他们是有关心我的，只不过是默默，只不过他们是偶尔，他们会因忙碌而忽略了我;后来，我学会了换位思考。</p><p>　　我明白了，他们不是不关心我，只是有人比我更需要他们的关心，只不过我们的身份不同罢了;他们是在为我而奔波忙碌着，我有什么理由不知足呢…还好…我看开了…还好，这一切都不算晚…还好，我不再苦苦执着了…</p><p>　　很多时候，我会把悲伤寄托在雨里，会把自己的情感寄托在一篇篇文章里…</p><p>　　曾经我会因为某个人而为对未来充满憧憬，对学习充满信心;会把某个人作为动力而努力，而现在我不再会这样，我明白，人不是为他人而活着，是为自己活着的。</p><p>　　我曾把自己比喻成一朵独自飘泊的蒲公英;把自己看成一株孤零的野草;把自己幻想成盛开在雪地的樱花…现实告诉我，那是不存在的。从此我便不再幻想，更多的是面对残酷的现实。</p><p>　　美好的幻想只会出现在童话里，只会在小说里才会看见。</p><p>　　在经历挫折、失败、离别后，我明白了人不该把快乐、安全感寄托在别人身上，安全感是自己给自己的;人该是为自己活着，为自己的灵魂活着…</p><p>　　后来，我们哭了;后来，我们明白人，有很多无奈的选择。后来，我们明白了眼泪不值钱。后来，我们不再寻找公平的存在。后来，我们学会了坚强。</p><p>　　后来，可惜再没有后来。</p><p></p>
-                    </p>
-                </div>
-                <span class="dateview">2015-07-15</span>
-            </ul>
-<ul class="arrow_box">
-                <div class="sy">
-                    <p>
-                        <p>&nbsp;很有感触啊，时光流逝，回忆依旧美丽，奈何我依然停留于此……</p><p>　　-老去的第一批90后喜欢隐身了，不怎么爱在群里发言了。一堆人聚在一起，一人一部手机，各玩各的。同学聚会必修的两个项目：吃饭，ktv。遇到不公的时候，没那么愤青了，会告诉自己，社会就是这样。90后的生活潜规则：可以不看电视，但电脑是必需品。永远不知道钱花哪了，没怎么吃，没怎么穿。熟人面前是话唠，生人面前一言不发。打字的手法相当不准确，但还是打的很快。凌晨12点前很少会入睡。曾经以为会一辈子陪在身边的朋友，某年某月，却突然发现他们都不见了。90后的我们，有很多的梦想，有的实现了，有的破灭了。90后的我们，挣扎过彷徨过，还是挺过来了。我们的心里都很清楚，我们经历了太多太多。亲情的分与合，爱情的分与合，友情的分与合;90后的我们即将成为这个社会的主力。【送给所有渐渐老去的90后!】<img title="1436353967332334.jpg" alt="0Z2113055-0.jpg" src="/images/1436353967332334.jpg"/></p>
-                    </p>
-                </div>
-                <span class="dateview">2015-07-08</span>
-            </ul>
-<ul class="arrow_box">
-                <div class="sy">
-                    <p>
-                        <p><img title="1433907459794194.jpg" alt="5fafd3ebc31c323311092c440bcf41bf.jpg" src="/images/1433907459794194.jpg"/>生活的坑都是自己挖的！譬如，听别人讲话，听到最后，耳朵里只会记住两类话：最愿意听的和最不愿意听的。然后，喜欢听的未必化成快乐，但不喜欢听的一定化成了痛苦，其他的都化成了风。</p>
-                    </p>
-                </div>
-                <span class="dateview">2015-06-10</span>
-            </ul>
-<ul class="arrow_box">
-                <div class="sy">
-                    <p>
-                        <p><img title="1433907584949668.jpg" alt="10b6697f23421977412e5c474aad191d.jpg" src="/images/1433907584949668.jpg"/>23号包括我带了的4个家属，一共十一人，小聚在三圣乡三叶草农家乐，自助烧烤...</p>
-                    </p>
-                </div>
-                <span class="dateview">2015-06-10</span>
-            </ul>
-<ul class="arrow_box">
-                <div class="sy">
-                    <p>
-                        <p><img title="1433907563878967.jpg" alt="01.jpg" src="/images/1433907563878967.jpg"/>有的人你可能认识了一辈子却忽视了一辈子；有的人你也许只见了一面却影响了一生；有的人默默的守在你身边为你付出却被冷落；有的人无心的一个表情却成了你永恒的牵挂，我们常常是努力珍惜未得到的，而遗忘了已拥有的。不要向远方寻找幸福，它也许就在你的手中，你只要安然，握住。</p>
-                    </p>
-                </div>
-                <span class="dateview">2015-06-10</span>
-            </ul>
-<ul class="arrow_box">
-                <div class="sy">
-                    <p>
-                        <p><img title="1433907524852889.jpg" alt="04e3825c7798116930e1e2fe7e5c136c.jpg" src="/images/1433907524852889.jpg"/>时隔多年，本来以为已经豪不介怀，当真正的真相被揭开，却再也找不着可以原谅的理由</p>
-                    </p>
-                </div>
-                <span class="dateview">2015-06-10</span>
-            </ul>
-<ul class="arrow_box">
-                <div class="sy">
-                    <p>
-                        <p><img title="1433907506239514.jpg" alt="3b02c65c8debfc8d81342ea2a7ea69d8.jpg" src="/images/1433907506239514.jpg"/>每个人都会有一段异常艰难的时光，生活的窘迫，工作的失意，学业的压力，爱的惶惶不可终日。挺过来的，人生就会豁然开朗；挺不过来的，时间也会教会你怎么与它们握手言和，所以你都不必害怕的。</p>
-                    </p>
-                </div>
-                <span class="dateview">2015-06-10</span>
-            </ul>
-<ul class="arrow_box">
-                <div class="sy">
-                    <p>
-                        <p><img title="1433907491564146.png" alt="1f8aea2172f6eb987c3de3f7ba474eb1.png" src="/images/1433907491564146.png"/>有一天当你发现疏远和拉黑的可能是曾经最聊得来的朋友；背后指责你说你不好的可能是你过去最亲密的伙伴；出手阻碍你的或许是你当初的合伙人；你才会明白，这个世界没有什么是不变的，这个时代，因为利益会有许多人做出许多你想不到的事。沙里淘金后，你才知道原来身边一直对你好的人有多珍贵。</p>
-                    </p>
-                </div>
-                <span class="dateview">2015-06-10</span>
-            </ul>
-<ul class="arrow_box">
-                <div class="sy">
-                    <p>
-                        <p><img title="1433907474136019.png" alt="6abfdd1f080561acedbd2606210951eb.png" src="/images/1433907474136019.png"/>汉语版：圣诞快乐！ 闵南语：心蛋快裸！ 江西版：生蛋快落！ 英文版：哈皮克瑞死么死！ 俄语版：买个萝卜切吧切吧炖了吧 韩语版：空起哇 撒起哇 哭死米塔 &nbsp;日文版：锅你得洗哇 碗你得洗哇 盆你得洗哇 锅碗盆你得洗哇～</p>
-                    </p>
-                </div>
-                <span class="dateview">2015-06-10</span>
-            </ul>
-<ul class="arrow_box">
-                <div class="sy">
-                    <p>
-                        <p>每每接到新项目，都感觉困难，踏出第一步后，就加班加点，如果客户没有在那个空档给出回复，状态一下子恢复到之前，害的我现在也有拖延症了...</p>
-                    </p>
-                </div>
-                <span class="dateview">2015-06-09</span>
-            </ul>
 
-     <div class="page">
+ -->
+
+
+
+   <!--  <div class="page">
   		<li>首页</li>
-<li class="thisclass">1</li>
-<li><a href='/'>2</a></li>
-<li><a href='/'>下一页</a></li>
-<li><a href='/'>末页</a></li>
-<li><select name='sldd' style='width:36px' onchange='location.href=this.options[this.selectedIndex].value;'>
-<option value='list_3_1.html' selected>1</option>
-<option value='list_3_2.html'>2</option>
-</select></li>
-<li><span class="pageinfo">共 <strong>2</strong>页<strong>22</strong>条</span></li>
-
-  	</div>
+        <li class="thisclass">1</li>
+        <li><a href='/'>2</a></li>
+        <li><a href='/'>下一页</a></li>
+        <li><a href='/'>末页</a></li>
+        <li><select name='sldd' style='width:36px' onchange='location.href=this.options[this.selectedIndex].value;'>
+        <option value='list_3_1.html' selected>1</option>
+        <option value='list_3_2.html'>2</option>
+        </select></li>
+        <li><span class="pageinfo">共 <strong>2</strong>页<strong>22</strong>条</span></li>
+  	</div>-->
+    <div class="page" style='width: 600px;margin-left:30%;' id='footer'></div>
   </div>
- </div> 
+ </div>
+
  <div class="idea">
- <p>
-当我们懂得珍惜平凡的幸福的时候，就已经成了人生的赢家。Nothing is as sweet as you 再没什么，能甜蜜如你。我以为只要很认真的喜欢就能打动一个人，到后来，却只打动了我自己。
- </p>
-</div> 
+    <p>
+        当我们懂得珍惜平凡的幸福的时候，就已经成了人生的赢家。Nothing is as sweet as you 再没什么，能甜蜜如你。我以为只要很认真的喜欢就能打动一个人，到后来，却只打动了我自己。
+    </p>
+</div>
 </div>
 <section class="visitors">
 	<div class="links">
-      	<h3><span>[<a href="/">申请友情链接</a>]</span>友情链接</h3>
+      	<h3><span>[<a href="http://wpa.qq.com/msgrd?v=3&uin=1169763240&site=qq&menu=yes" target="_blank">申请友情链接</a>]</span>友情链接</h3>
       <ul>
       <li class="yqlj">友情链接:</li>
-        <li><a href='/' target='_blank'>罗俊杰个人博客微博</a> </li>
+        <li><a href='http://zizhuling.cn' target='_blank'>何彪个人博客微博</a> </li>
       </ul>
     </div>
 </section>
@@ -219,5 +135,7 @@ s.parentNode.insertBefore(hm, s);
 <script type="text/javascript">
 swfobject.registerObject("FlashID");
 </script>
+<script src="/js/vue.js" type="text/javascript"></script>
+<script src="/js/doing.js" type="text/javascript"></script>
 </body>
 </html>
