--- a/src/main/resources/templates/blog/learn.html
+++ b/src/main/resources/templates/blog/learn.html
@@ -21,7 +21,7 @@
 <!--header-->
 <!--header-->
 <header>
-      <div id="logo"><a href="/" title="何彪个人博客"><img src="/images/logo.png" width="260" height="100"></a></div>
+      <div id="logo"><a href="http://www.zizhuling.cn" title="何彪个人博客"><img src="/images/logo.png" width="260" height="100"></a></div>
       <nav class="topnav" id="topnav">
           <a href="/index" title="首页"><span>首页</span><span class="en"></span></a>
           <a href="/about" title="关于我"><span>关于我</span><span class="en"></span></a>
@@ -35,194 +35,34 @@
 <!--header-->
 
 <!--header-->
-<article class="blogs">
-	<h1 class="t_nav"><span>"理无专在，而学无止境也，然则问可少耶？"</span><a class="n1" href="/" title="网站首页">网站首页</a><a class="n2" href="/" title="学无止境">学无止境</a></h1>
+<article class="blogs" id="app-learn">
+	<h1 class="t_nav"><span>"理无专在，而学无止境也，然则问可少耶？"</span><a class="n1" href="/index" title="网站首页">网站首页</a><a class="n2" href="#" title="学无止境">学无止境</a></h1>
     <div class="newblog left">
-    <h2>
-         	<a title="dedecms常用安全设置集合整理" href="/">dedecms常用安全设置集合整理</a>
-         </h2>
-       <p class="dateview">
-       		<span>发布时间：2015-09-12</span>
-            <span>作者：何彪个人博客</span>
-            <span>[<a href="/"><a href='/a/xindebiji/index.html'>心得笔记</a></a>]</span>
-       </p>
-        <figure>
-        	<a title="dedecms常用安全设置集合整理" href="/">
-            	<img src='/images/defaultpic.gif' border='0' width='120' height='120' alt='dedecms常用安全设置集合整理'>
-            </a>
-        </figure>
-        <ul class="nlist">
-          <p>织梦系统用户很多，被发现的漏洞也就相对很多，所以网站安全需要做好，很多所谓的“黑客”都是用工具来扫描入侵，厉害点的人是不屑来黑我们的小网站的，所以在我们不是专业维...</p>
-          <a title="dedecms常用安全设置集合整理" class="readmore" href="/" target="_blank">详细信息&gt;&gt;</a>
-        </ul>
-        <div class="line"></div>
-<h2>
-         	<a title="织梦cms文章页调用tag关键词，增加内链和关键字" href="/">织梦cms文章页调用tag关键词，增加内链和关键字</a>
-         </h2>
-       <p class="dateview">
-       		<span>发布时间：2015-09-12</span>
-            <span>作者：罗俊杰个人博客</span>
-            <span>[<a href="/"><a href='/a/xindebiji/index.html'>心得笔记</a></a>]</span>
-       </p>
-        <figure>
-        	<a title="织梦cms文章页调用tag关键词，增加内链和关键字" href="/">
-            	<img src='/images/defaultpic.gif' border='0' width='120' height='120' alt='织梦cms文章页调用tag关键词，增加内链和关键字'>
-            </a>
-        </figure>
-        <ul class="nlist">
-          <p>我们只需要对网站模版文件进行简单的修改即可调用。 1、打开文章页模板文件templets/default/article_article.htm 2、把下面这段代码插入到合适的位置，一般插入在正文{dede:field.body/}标签下面...</p>
-          <a title="织梦cms文章页调用tag关键词，增加内链和关键字" class="readmore" href="/" target="_blank">详细信息&gt;&gt;</a>
-        </ul>
-        <div class="line"></div>
-<h2>
-         	<a title="dedecms织梦上传图片失败 ERROR:Copy Uploadfile Error! 提" href="/">dedecms织梦上传图片失败 ERROR:Copy Uploadfile Error! 提</a>
-         </h2>
-       <p class="dateview">
-       		<span>发布时间：2015-09-12</span>
-            <span>作者：罗俊杰个人博客</span>
-            <span>[<a href="/"><a href='/a/xindebiji/index.html'>心得笔记</a></a>]</span>
-       </p>
-        <figure>
-        	<a title="dedecms织梦上传图片失败 ERROR:Copy Uploadfile Error! 提" href="/">
-            	<img src='/images/defaultpic.gif' border='0' width='120' height='120' alt='dedecms织梦上传图片失败 ERROR:Copy Uploadfile Error! 提'>
-            </a>
-        </figure>
-        <ul class="nlist">
-          <p>ERROR:Copy Uploadfile Error! 用中文翻译的 意思是：错误显示：拷贝（复制）上传文件出错！原因可能是上传的文件损坏，或者是上传目录无写权限！...</p>
-          <a title="dedecms织梦上传图片失败 ERROR:Copy Uploadfile Error! 提" class="readmore" href="/" target="_blank">详细信息&gt;&gt;</a>
-        </ul>
-        <div class="line"></div>
-<h2>
-         	<a title="织梦搜索页面搜索结果总数调用方法" href="/">织梦搜索页面搜索结果总数调用方法</a>
-         </h2>
-       <p class="dateview">
-       		<span>发布时间：2015-09-11</span>
-            <span>作者：罗俊杰个人博客</span>
-            <span>[<a href="/"><a href='/a/xindebiji/index.html'>心得笔记</a></a>]</span>
-       </p>
-        <figure>
-        	<a title="织梦搜索页面搜索结果总数调用方法" href="/">
-            	<img src='/images/defaultpic.gif' border='0' width='120' height='120' alt='织梦搜索页面搜索结果总数调用方法'>
-            </a>
-        </figure>
-        <ul class="nlist">
-          <p>由于dedecms原生不支持搜索页面结 果总数的调用，所以得自己修改文件来支持了。搜索页面调用的代码全在/include/arc.searchview.class.php里，我们先打开 /include/arc.searchview.class.php文件，然后...</p>
-          <a title="织梦搜索页面搜索结果总数调用方法" class="readmore" href="/" target="_blank">详细信息&gt;&gt;</a>
-        </ul>
-        <div class="line"></div>
-<h2>
-         	<a title="缩略图失真模糊完美解决方法" href="/">缩略图失真模糊完美解决方法</a>
-         </h2>
-       <p class="dateview">
-       		<span>发布时间：2015-09-11</span>
-            <span>作者：罗俊杰个人博客</span>
-            <span>[<a href='/'>心得笔记</a>]</span>
-       </p>
-        <figure>
-        	<a title="缩略图失真模糊完美解决方法" href="/">
-            	<img src='/images/defaultpic.gif' border='0' width='120' height='120' alt='缩略图失真模糊完美解决方法'>
-            </a>
-        </figure>
-        <ul class="nlist">
-          <p>由于dede默认只生成一个规格大小的缩略图，而往往在一个站不同页面内需要的缩略图大小不一致，比例不一致，这就造成了缩略图不清晰，失真，下面提供的方法就完美解决了这个问题...</p>
-          <a title="缩略图失真模糊完美解决方法" class="readmore" href="/" target="_blank">详细信息&gt;&gt;</a>
-        </ul>
-        <div class="line"></div>
-<h2>
-         	<a title="分享一个炫酷利用纯CSS3实现的手风琴特效" href="/">分享一个炫酷利用纯CSS3实现的手风琴特效</a>
-         </h2>
-       <p class="dateview">
-       		<span>发布时间：2015-08-18</span>
-            <span>作者：罗俊杰个人博客</span>
-            <span>[<a href='/'>心得笔记</a>]</span>
-       </p>
-        <figure>
-        	<a title="分享一个炫酷利用纯CSS3实现的手风琴特效" href="/">
-            	<img src='/images/1439884533246600-lp.jpg' border='0' width='120' height='120' alt='分享一个炫酷利用纯CSS3实现的手风琴特效'>
-            </a>
-        </figure>
-        <ul class="nlist">
-          <p>各位网友，大家好，我是爱旅游、喜欢在路上和研究互联网技术的罗俊杰个人博客。前一段时间我给大家分享了一系列CSS3实战开发的案例，继续以前的脚步。 在本次CSS3实战开发案例中，我将...</p>
-          <a title="分享一个炫酷利用纯CSS3实现的手风琴特效" class="readmore" href="/" target="_blank">详细信息&gt;&gt;</a>
-        </ul>
-        <div class="line"></div>
-<h2>
-         	<a title="登录phpmyadmin提示: #1045 无法登录 MySQL 服务器" href="/">登录phpmyadmin提示: #1045 无法登录 MySQL 服务器</a>
-         </h2>
-       <p class="dateview">
-       		<span>发布时间：2015-08-05</span>
-            <span>作者：罗俊杰个人博客</span>
-            <span>[<a href="/">心得笔记</a>]</span>
-       </p>
-        <figure>
-        	<a title="登录phpmyadmin提示: #1045 无法登录 MySQL 服务器" href="/">
-            	<img src='/images/1438750388119890-lp.jpg' border='0' width='120' height='120' alt='登录phpmyadmin提示: #1045 无法登录 MySQL 服务器'>
-            </a>
-        </figure>
-        <ul class="nlist">
-          <p>打开phpmyadmin，进行登录，出现以下问题，提示：#1045 无法登录 MySQL 服务器 或许出现以下错误情况：phpmyadmin:#1045 无法登录 MySQL 服务器。Access denied for user ‘root’@localhost’ (using passwo...</p>
-          <a title="登录phpmyadmin提示: #1045 无法登录 MySQL 服务器" class="readmore" href="/" target="_blank">详细信息&gt;&gt;</a>
-        </ul>
-        <div class="line"></div>
-<h2>
-         	<a title="一份详细的网站SEO优化方案" href="/">一份详细的网站SEO优化方案</a>
-         </h2>
-       <p class="dateview">
-       		<span>发布时间：2015-07-27</span>
-            <span>作者：罗俊杰个人博客</span>
-            <span>[<a href="/">心得笔记</a>]</span>
-       </p>
-        <figure>
-        	<a title="一份详细的网站SEO优化方案" href="/">
-            	<img src='/images/defaultpic.gif' border='0' width='120' height='120' alt='一份详细的网站SEO优化方案'>
-            </a>
-        </figure>
-        <ul class="nlist">
-          <p>一 、网站定位 在建设一个网站之前，我们首先要做的就是一个网站清晰的定位，会带来转化率相对较高的客户群体，我们建站的目的就是为了营销，只有集中来做某一件事，才会更好...</p>
-          <a title="一份详细的网站SEO优化方案" class="readmore" href="/" target="_blank">详细信息&gt;&gt;</a>
-        </ul>
-        <div class="line"></div>
-<h2>
-         	<a title="高度伪原创的技巧" href="/">高度伪原创的技巧</a>
-         </h2>
-       <p class="dateview">
-       		<span>发布时间：2015-07-20</span>
-            <span>作者：罗俊杰个人博客</span>
-            <span>[<a href="/">心得笔记</a>]</span>
-       </p>
-        <figure>
-        	<a title="高度伪原创的技巧" href="/">
-            	<img src='/images/1437375951388786.png' border='0' width='120' height='120' alt='高度伪原创的技巧'>
-            </a>
-        </figure>
-        <ul class="nlist">
-          <p>1、确定内容的关键词 首先，你要确定发表这篇文章的关键词，在围绕这个关键词搜索相关的文章。 2、寻找相关的内容 关于寻找相关的内容，比如说：一个关于礼品网站的站点， 要发...</p>
-          <a title="高度伪原创的技巧" class="readmore" href="/" target="_blank">详细信息&gt;&gt;</a>
-        </ul>
-        <div class="line"></div>
-<h2>
-         	<a title="教你几招高度伪原创软文的方法！" href="/">教你几招高度伪原创软文的方法！</a>
-         </h2>
-       <p class="dateview">
-       		<span>发布时间：2015-07-20</span>
-            <span>作者：罗俊杰个人博客</span>
-            <span>[<a href="/">CSS3|Html5</a>]</span>
-       </p>
-        <figure>
-        	<a title="教你几招高度伪原创软文的方法！" href="/">
-            	<img src='/images/1437361897956747.jpg' border='0' width='120' height='120' alt='教你几招高度伪原创软文的方法！'>
-            </a>
-        </figure>
-        <ul class="nlist">
-          <p>电子商务时代，不管是作为一名公司网站管理员还是个人站在，我们每天都得不断的为网站添加新的内容，因为网站的内容基本上可以说是一个网站的灵魂，今天“兴哥”就跟大家一起...</p>
-          <a title="教你几招高度伪原创软文的方法！" class="readmore" href="/" target="_blank">详细信息&gt;&gt;</a>
-        </ul>
-        <div class="line"></div>
+
+        <template v-for="data in dataList">
+            <h2><a v-bind:title="data.title" v-bind:href="bindsrc(data.cid)">{{data.title}}</a></h2>
+           <p class="dateview">
+                <span>发布时间：{{data.gtmmodified}}</span>
+                <span>作者：{{data.author}}个人博客</span>
+                <span>[<a href="#"><a href='#'>{{data.typename}}</a></a>]</span>
+           </p>
+            <figure>
+                <a v-bind:title="data.title" v-bind:href="bindsrc(data.cid)">
+                    <img v-bind:src='data.titlepicture' border='0' width='120' height='120' v-bind:alt='data.title'>
+                </a>
+            </figure>
+            <ul class="nlist">
+              <p v-html="data.introduction"></p>
+              <a v-bind:title="data.title"  v-bind:href="bindsrc(data.cid)" class="readmore">详细信息&gt;&gt;</a>
+            </ul>
+            <div class="line"></div>
+        </template>
+
  
         <div class="blank"></div>
-        <div class="page">
-        	
-        </div>
+        <!--分页开始-->
+        <div class="page" style='width: 600px;margin-left:30%;' id='footer'></div>
+        <!--分页结束-->
     </div>
 	<aside class="right">
 		<div id="bdcs">
@@ -235,86 +75,59 @@
                                 <input name="entry" type="hidden" value="1">
                                 <input name="ie" type="hidden" value="gbk">
                                 <input name="q" class="bdcs-search-form-input" id="bdcs-search-form-input" style="height:28px; line-height:28px;" type="text" placeholder="请输入关键词">
-                                <input class="bdcs-search-form-submit " id="bdcs-search-form-submit" type="submit" value="搜索">
+                                <input class="bdcs-search-form-submit " id="bdcs-search-form-submit" type="button" value="搜索" v-on:click="search()">
                             </form>      
                         </div>
                    </div>
             </div>
         </div>
-<div class="blank"></div>
- 	<div class="rnav">
-      <h2>栏目导航</h2>
-      <ul>
-			
-            	<li><a href="/">心得笔记</a></li>
-           
-            	<li><a href="/">作品展示</a></li>
-           
-            	<li><a href="/">CSS3|Html5</a></li>
-           
-            	<li><a href="/">网站建设</a></li>
-           
-            	<li><a href="/">JS经典实例</a></li>
-           
-            	<li><a href="/">推荐工具</a></li>
-            
-     </ul>      
- </div>
- 	<div class="rnavs">
-      <h2>栏目导航</h2>
-      <ul>
-			
-            	<li><a href="/">心得笔记</a></li>
-           
-            	<li><a href="/">作品展示</a></li>
-           
-            	<li><a href="/">CSS3|Html5</a></li>
-           
-            	<li><a href="/">网站建设</a></li>
-           
-            	<li><a href="/">JS经典实例</a></li>
-           
-            	<li><a href="/">推荐工具</a></li>
-           
-     </ul>      
-    </div>
-	<div class="news">
-		<h3>
-      		<p class="tj_t1">最新<span>文章</span></p>
-    	</h3>
-        <ul class="rank">
-        	<li><a href="/" title="dedecms常用安全设置集合整理" target="_blank">dedecms常用安全设置集合整理</a></li>
-<li><a href="/" title="织梦cms文章页调用tag关键词，增加内" target="_blank">织梦cms文章页调用tag关键词，增加内</a></li>
-<li><a href="/" title="dedecms织梦上传图片失败 ERROR:Copy Upl" target="_blank">dedecms织梦上传图片失败 ERROR:Copy Upl</a></li>
-<li><a href="/" title="织梦搜索页面搜索结果总数调用方法" target="_blank">织梦搜索页面搜索结果总数调用方法</a></li>
-<li><a href="/" title="缩略图失真模糊完美解决方法" target="_blank">缩略图失真模糊完美解决方法</a></li>
-<li><a href="/" title="分享一个炫酷利用纯CSS3实现的手风琴" target="_blank">分享一个炫酷利用纯CSS3实现的手风琴</a></li>
-<li><a href="/" title="登录phpmyadmin提示: #1045 无法登录 MyS" target="_blank">登录phpmyadmin提示: #1045 无法登录 MyS</a></li>
-<li><a href="/" title="一份详细的网站SEO优化方案" target="_blank">一份详细的网站SEO优化方案</a></li>
-
-         </ul>
-        <h3 class="ph">
-          <p class="tj_t2">点击<span>排行</span></p>
-        </h3>
-        <ul class="paih">
-        	<li><a href="/" title="分享一个炫酷利用纯CSS3实现的手风琴" target="_blank">分享一个炫酷利用纯CSS3实现的手风琴</a></li>
-<li><a href="/" title="教你几招高度伪原创软文的方法！" target="_blank">教你几招高度伪原创软文的方法！</a></li>
-<li><a href="/" title="Ui Parade免费的UI在线设计工具" target="_blank">Ui Parade免费的UI在线设计工具</a></li>
-<li><a href="/" title="360搜索技巧大全" target="_blank">360搜索技巧大全</a></li>
-<li><a href="/" title="情侣博客模板系列之《回忆》PSD" target="_blank">情侣博客模板系列之《回忆》PSD</a></li>
-<li><a href="/" title="织梦搜索页面搜索结果总数调用方法" target="_blank">织梦搜索页面搜索结果总数调用方法</a></li>
-<li><a href="/" title="css 文件夹的命名规范" target="_blank">css 文件夹的命名规范</a></li>
-<li><a href="/" title="【分享】css3侧边栏导航不同方向划出" target="_blank">【分享】css3侧边栏导航不同方向划出</a></li>
-
-    	</ul>
-    </div>
+        <div class="blank"></div>
+            <div class="rnav">
+              <h2>栏目导航</h2>
+              <ul>
+                        <li><a href="#" v-on:click="queryLanMu('10')">心得笔记</a></li>
+                        <li><a href="#" v-on:click="queryLanMu('11')">IP查询</a></li>
+                        <li><a href="#" v-on:click="queryLanMu('12')">CSS3|Html5</a></li>
+                        <li><a href="#" v-on:click="queryLanMu('13')">网站建设</a></li>
+                        <li><a href="#" v-on:click="queryLanMu('14')"> JS经典实例</a></li>
+                        <li><a href="#" v-on:click="queryLanMu('15')">推荐工具</a></li>
+             </ul>
+         </div>
+        <div class="rnavs">
+          <h2>栏目导航</h2>
+          <ul>
+              <li><a href="#" v-on:click="queryLanMu('10')">心得笔记</a></li>
+              <li><a href="#" v-on:click="queryLanMu('11')">IP查询</a></li>
+              <li><a href="#" v-on:click="queryLanMu('12')">CSS3|Html5</a></li>
+              <li><a href="#" v-on:click="queryLanMu('13')">网站建设</a></li>
+              <li><a href="#" v-on:click="queryLanMu('14')"> JS经典实例</a></li>
+              <li><a href="#" v-on:click="queryLanMu('15')">推荐工具</a></li>
+          </ul>
+        </div>
+        <div class="news">
+            <h3>
+                <p class="tj_t1">最新<span>文章</span></p>
+            </h3>
+            <ul class="rank">
+                <li v-for="data in newsList">
+                    <a v-bind:href="bindsrc(data.cid)"  v-bind:title="data.title">{{data.title}}</a>
+                </li>
+             </ul>
+            <h3 class="ph">
+              <p class="tj_t2">点击<span>排行</span></p>
+            </h3>
+            <ul class="paih">
+                <li v-for="data in rankList">
+                    <a v-bind:href="bindsrc(data.cid)"  v-bind:title="data.title">{{data.title}}</a>
+                </li>
+            </ul>
+        </div>
         <!-- share分享 -->
-   <div class="share">
-    	<h2></h2>  
-    <div class="bdsharebuttonbox"><a title="分享到新浪微博" class="bds_tsina" href="/" data-cmd="tsina"></a><a title="分享到腾讯微博" class="bds_tqq" href="/" data-cmd="tqq"></a><a title="分享到QQ空间" class="bds_qzone" href="/" data-cmd="qzone"></a><a title="分享到微信" class="bds_weixin" href="/" data-cmd="weixin"></a><a title="分享到人人网" class="bds_renren" href="/" data-cmd="renren"></a><a class="bds_more" href="/" data-cmd="more"></a></div>
-<script>window._bd_share_config={"common":{"bdSnsKey":{"tsina":"18067716981","tqq":"1016340174@qq.com"},"bdText":"","bdMini":"2","bdMiniList":false,"bdPic":"","bdStyle":"1","bdSize":"32"},"share":{},"image":{"viewList":["tsina","tqq","qzone","weixin","renren"],"viewText":"分享到：","viewSize":"32"},"selectShare":{"bdContainerClass":null,"bdSelectMiniList":["tsina","tqq","qzone","weixin","renren"]}};with(document)0[(getElementsByTagName('head')[0]||body).appendChild(createElement('script')).src='http://bdimg.share.baidu.com/static/api//js/share.js?v=89860593.js?cdnversion='+~(-new Date()/36e5)];</script>
- <p></p>
-	</div>
+        <div class="share">
+            <h2></h2>
+        <div class="bdsharebuttonbox"><a title="分享到新浪微博" class="bds_tsina" href="/" data-cmd="tsina"></a><a title="分享到腾讯微博" class="bds_tqq" href="/" data-cmd="tqq"></a><a title="分享到QQ空间" class="bds_qzone" href="/" data-cmd="qzone"></a><a title="分享到微信" class="bds_weixin" href="/" data-cmd="weixin"></a><a title="分享到人人网" class="bds_renren" href="/" data-cmd="renren"></a><a class="bds_more" href="/" data-cmd="more"></a></div>
+            <p></p>
+        </div>
  	<!--share分享-->  
 	</aside>
 </article>
@@ -328,5 +141,10 @@
 <script type="text/javascript">
 swfobject.registerObject("FlashID");
 </script>
+<!-- share分享 -->
+<script>window._bd_share_config={"common":{"bdSnsKey":{"tsina":"18067716981","tqq":"1016340174@qq.com"},"bdText":"","bdMini":"2","bdMiniList":false,"bdPic":"","bdStyle":"1","bdSize":"32"},"share":{},"image":{"viewList":["tsina","tqq","qzone","weixin","renren"],"viewText":"分享到：","viewSize":"32"},"selectShare":{"bdContainerClass":null,"bdSelectMiniList":["tsina","tqq","qzone","weixin","renren"]}};with(document)0[(getElementsByTagName('head')[0]||body).appendChild(createElement('script')).src='http://bdimg.share.baidu.com/static/api//js/share.js?v=89860593.js?cdnversion='+~(-new Date()/36e5)];</script>
+
+<script src="/js/vue.js" type="text/javascript"></script>
+<script src="/js/learn.js" type="text/javascript"></script>
 </body>
 </html>
