--- a/src/main/resources/templates/blog/photo.html
+++ b/src/main/resources/templates/blog/photo.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>相册-何彪个人博客-一个开启你记录旅行的足迹和分享途中所见所闻，与探讨互联网神秘技术的网站</title>
-<meta name="keywords" content="何彪个人博客,分享旅行,喜欢在路上,旅游,慢生活,所见所闻,千奇百怪,罗俊杰个人博客博客" />
+<meta name="keywords" content="何彪个人博客,分享旅行,喜欢在路上,旅游,慢生活,所见所闻,千奇百怪,何彪个人博客博客" />
 <meta name="description" content="一个关注旅行，在路上寻找那个丢失自我，远离城市的喧哗，放慢脚步去享受慢生活，分享在路上所见所闻，与大家一起发现这世界的千奇百怪！" />
 <link href="/css/base.css" rel="stylesheet">
 <link href="/css/case.css" rel="stylesheet">
@@ -16,7 +16,7 @@
 <script src="/js/baguettebox.min.js"></script>
 <!--分享相册-->
 <script type="text/javascript" src="/js/jquery1.42.min.js"></script>
-<script type="text/javascript" src="/js/waterfall.js" ></script> 
+<script type="text/javascript" src="/js/waterfall.js" ></script>
 <!--[if lt IE 9]>
 <script src="/js/modernizr.js"></script>
 <![endif]-->
@@ -57,8 +57,8 @@ s.parentNode.insertBefore(hm, s);
 
     <h1 class="t_nav">
     	<span>好咖啡要和朋友一起品尝，好"风景"也要和同样喜欢它的人一起分享。 </span>
-        <a href="/" class="n1">网站首页</a>
-        <a href="/" class="n2">作品展示</a>
+        <a href="/index" class="n1">网站首页</a>
+        <a href="#" class="n2">作品展示</a>
     </h1>
    <div class="text5"><span>记录·回忆</span></div>	
    <div class="albums">
@@ -349,20 +349,20 @@ s.parentNode.insertBefore(hm, s);
     </div>
 
       <ul  class="cloud">
-        <li><a href="/" target="_blank">个人博客</a></li>
-        <li><a>丽江</a></li>
-        <li><a>大理</a></li>
-        <li><a>九寨沟</a></li>
-        <li><a>西藏</a></li>
-        <li><a>厦门</a></li>
-        <li><a>三亚</a></li>
-        <li><a >天涯海角</a></li>
-        <li><a>北京</a></li>
-        <li><a >南京</a></li>
-        <li><a>重庆</a></li>
-        <li><a >四川</a></li>
-        <li><a >千户苗寨</a></li>
-        <li><a >台湾</a></li>
+        <li><a href="/index">个人博客</a></li>
+        <li><a href='/tags'>丽江</a></li>
+        <li><a href='/tags'>大理</a></li>
+        <li><a href='/tags'>九寨沟</a></li>
+        <li><a href='/tags'>西藏</a></li>
+        <li><a href='/tags'>厦门</a></li>
+        <li><a href='/tags'>三亚</a></li>
+        <li><a href='/tags'>天涯海角</a></li>
+        <li><a href='/tags'>北京</a></li>
+        <li><a href='/tags'>南京</a></li>
+        <li><a href='/tags'>重庆</a></li>
+        <li><a href='/tags'>四川</a></li>
+        <li><a href='/tags'>千户苗寨</a></li>
+        <li><a href='/tags'>台湾</a></li>
       </ul>
   </ul>
 </div>
@@ -475,8 +475,12 @@ s.parentNode.insertBefore(hm, s);
 </article>-->
 
 
-<div class="baguetteBoxOne gallery">
-        <a href="/" data-caption="Golden Gate Bridge"><img src="/images/1-1.jpg"></a>
+<div class="baguetteBoxOne gallery" id="app-photo">
+        <a v-for="data in dataList">
+            <img v-bind:src='data.url'>
+        </a>
+
+     <!--   <a href="/" data-caption="Golden Gate Bridge"><img src="/images/1-1.jpg"></a>
         <a href="/" title="Midnight City"><img src="/images/1-2.jpg"></a>
         <a href="/"><img src="/images/1-4.jpg"></a>
         <a href="/"><img src="/images/1-5.jpg"></a>
@@ -487,7 +491,7 @@ s.parentNode.insertBefore(hm, s);
         <a href="/"><img src="/images/1-5.jpg"></a>
         <a href="/"><img src="/images/1-6.jpg"></a>
         <a href="/"><img src="/images/1-7.jpg"></a>
-        <a href="/"><img src="/images/1-8.jpg"></a>
+        <a href="/"><img src="/images/1-8.jpg"></a>-->
 </div>
 <script>
 baguetteBox.run('.baguetteBoxOne', {
@@ -497,28 +501,33 @@ baguetteBox.run('.baguetteBoxOne', {
 
 
  <!-- 分页-->
- <div class="page">
+ <!--<div class="page">
         <li>首页</li>
-<li class="thisclass">1</li>
-<li><a href='/'>2</a></li>
-<li><a href='/'>下一页</a></li>
-<li><a href='/'>末页</a></li>
-<li><select name='sldd' style='width:36px' onchange='location.href=this.options[this.selectedIndex].value;'>
-<option value='list_5_1.html' selected>1</option>
-<option value='list_5_2.html'>2</option>
-</select></li>
-<li><span class="pageinfo">共 <strong>2</strong>页<strong>30</strong>条</span></li>
-
-
-  </div>
+        <li class="thisclass">1</li>
+        <li><a href='/'>2</a></li>
+        <li><a href='/'>下一页</a></li>
+        <li><a href='/'>末页</a></li>
+        <li><select name='sldd' style='width:36px' onchange='location.href=this.options[this.selectedIndex].value;'>
+        <option value='list_5_1.html' selected>1</option>
+        <option value='list_5_2.html'>2</option>
+        </select></li>
+        <li><span class="pageinfo">共 <strong>2</strong>页<strong>30</strong>条</span></li>
+  </div>-->
+    <!--分页开始-->
+    <div class="page" style='width: 600px;margin-left:45%;' id='footer'></div>
+    <!--分页结束-->
 <footer>
   <p class="ft-copyright">何彪个人博客 Sunshine &nbsp;&nbsp;鄂ICP备18012534号</p>
 <div id="tbox"> <a id="togbook" href=""></a> <a id="gotop" href="javascript:void(0)"></a> </div>
 </footer> 
 <script src="/js/silder.js"></script>
+<!--
 <script type="text/javascript">jQuery(".lanmubox").slide({easing:"easeOutBounce",delayTime:400});</script>
+-->
 <script type="text/javascript">
 swfobject.registerObject("FlashID");
 </script>
+<script src="/js/vue.js" type="text/javascript"></script>
+<script src="/js/photo.js" type="text/javascript"></script>
 </body>
 </html>
