--- a/src/main/resources/templates/blog/saying.html
+++ b/src/main/resources/templates/blog/saying.html
@@ -58,16 +58,34 @@ var duoshuoQuery = {short_name:"aiwke"};
 	})();
 	</script>
 <!-- 多说公共JS代码 end -->    <!-- Duoshuo Comment END -->
+
+
+        <!--添加评论-->
+        <div class="tit01">
+            <h3>文章评论</h3>
+            <!--PC版-->
+            <div id="SOHUCS" sid="<#article/id#>" ></div>
+        </div>
+        <script charset="utf-8" type="text/javascript" src="https://changyan.sohu.com/upload/changyan.js" ></script>
+        <script type="text/javascript">
+            window.changyan.api.config({
+                appid: 'cytKzYNfj',
+                conf: 'prod_07cc58b4a84c0ffab71eb1ca6cc6c9a4'
+            });
+        </script>
+
+
+
     </div>
     <aside class="right">
     	<div class="tit01">
       <h3>关注我</h3>
       <div class="gzwm">
         <ul>
-        	<li><a class="xlwb" href="/" target="_blank">新浪微博</a></li>
-          	<li><a class="txwb" href="/" target="_blank">腾讯微博</a></li>
-          	<li><a class="rss" href="/" target="_blank">RSS</a></li>
-          	<li><a class="wx" href="/">邮箱</a></li>
+            <li><a class="xlwb" href="https://weibo.com/u/5863925408?refer_flag=1001030103_&is_all=1" target="_blank">新浪微博</a></li>
+            <li><a class="txwb" href="http://t.qq.com/HB1169763240" target="_blank">腾讯微博</a></li>
+            <li><a class="rss" href="https://www.inoreader.com/folder/Lifestyle" target="_blank">RSS</a></li>
+            <li><a class="wx" href="http://mail.qq.com/cgi-bin/qm_share?t=qm_mailme&email=1169763240@qq.com" target="_blank">邮箱</a></li>
         </ul>
       </div>
     </div>
@@ -88,8 +106,8 @@ var duoshuoQuery = {short_name:"aiwke"};
             <div class="avatar"><a href="/" title="罗俊杰个人博客">
             	<span>何彪个人博客</span></a>
             </div>
-            <p>网名：<span>Sunshine</span> | 罗俊杰个人博客</p>
-            <p>姓名：罗俊杰个人博客</p>
+            <p>网名：<span>Sunshine</span> | 何彪个人博客</p>
+            <p>姓名：何彪个人博客</p>
             <p>生日：1994-08-18</p>
             <p>籍贯：湖北--孝感市</p>
             <p>现居：上海--松江区</p>
