--- a/src/main/resources/templates/blog/saying.html
+++ b/src/main/resources/templates/blog/saying.html
@@ -95,7 +95,7 @@ var duoshuoQuery = {short_name:"aiwke"};
     	<ul id="slider" class="slider">  
             <li>网站新增一个iweibo平台，哪根筋玩玩儿...</li>  
 <li>晚上十二点之前休息的，结果第二天两点才醒来，真服了自己...... </li>  
- <li>从2011年建博客开始已经有三年了，虽然前期一直都没怎么管理，但是有兴趣依旧如初，还是让我在这一行混了那么久... </li>  
+ <li>从2016年建博客开始已经有三年了，虽然前期一直都没怎么管理，但是有兴趣依旧如初，还是让我在这一行混了那么久... </li>
 <li>生活越来越不规律了，一觉醒来就是2点了，吃完饭3点钟，研究研究代码，一晃神6点了......</li>  
 <li>其实北方的空气还真的是越来越差了，今年4月份到天津后，就没有遇到过一次晴朗的天气，现在放眼过去，整个城市都陷...</li>  
 <li>昨天都还几度，今天就飙到26&deg;了，又没有春天了...</li>  
@@ -103,7 +103,7 @@ var duoshuoQuery = {short_name:"aiwke"};
  		</ul>
    	</div>
          <div class="about_c">
-            <div class="avatar"><a href="/" title="罗俊杰个人博客">
+            <div class="avatar"><a href="/" title="何彪个人博客">
             	<span>何彪个人博客</span></a>
             </div>
             <p>网名：<span>Sunshine</span> | 何彪个人博客</p>
