--- a/src/main/resources/templates/blog/doing.html
+++ b/src/main/resources/templates/blog/doing.html
@@ -6,7 +6,6 @@
 <meta name="description" content="一个关注旅行，在路上寻找那个丢失自我，远离城市的喧哗，放慢脚步去享受慢生活，分享在路上所见所闻，与大家一起发现这世界的千奇百怪！" />
 <link href="/css/base.css" rel="stylesheet">
 <link href="/css/mood.css" rel="stylesheet">
-<!--<link href="/css/bootstrap.min.css"  rel="stylesheet">-->
 
 <!--[if lt IE 9]>
 <![endif]--><script src="/js/modernizr.js"></script>
@@ -72,42 +71,7 @@ s.parentNode.insertBefore(hm, s);
                 <span class="dateview">{{data.gtmcreate}}</span>
         </ul>
    </template>
-<!--
-<ul class="arrow_box">
-                <div class="sy">
-                    <p>
-                        <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 有的时候，我们说放下了，其实心里并没有真正的放下，我们只是假装痊愈，假装幸福，假装不在乎。然后在某寂静的角落里默默地重复伤心，默默地流泪。<br/>世上最奢侈的人，就是肯花时间陪你的人。时间如白驹过隙，把时间分给了你，就等于把自己的世界分给了你。肯陪你去把这个世界的每个角落都走过。<br/>你的人生不会辜负你的。那些转错的弯，那些流下的泪水，那些滴下的汗水，全都让你成为独一无二的自己。<br/>我过得还可以，不好不坏，不惊不喜，一切只是还可以。这样的生活我觉得也挺好。<br/>任何打击都不应该成为你堕落的借口，你改变不了这个世界，但你可以改变自己。<br/>宁愿花时间去修炼不完美的自己，也不要浪费时间去期待完美的别人。<br/>青春总需要一些疼痛让我们刻骨铭心，总需要一些伤疤证明我们曾经年少过。<br/>感情不需要诺言、期限与条件。它只需要两个人：一个能够信任的人，与一个愿意理解的人。<br/>生命中的许多东西是可遇不可求，刻意强求的得不到，而不曾被期待的往往会不期而至。<br/>人生不是要按别人的想法去过，而是要跟随内心，做自己想做的那个人。<br/>人就是这么奇怪，受了天大的委屈都不会吭声，但听到安慰的话却会泣不成声。<br/>我把时间给了你，等于把自己的世界给了你。</p>
-                    </p>
-                </div>
-                <span class="dateview">2015-07-21</span>
-            </ul>
 
-
-<ul class="arrow_box">
-                <div class="sy">
-                    <p>
-                        <p>&nbsp;寂寞的人总是会用心的记住他生命中出现过的每一个人，于是我总是意犹未尽地想起你 在每个星光陨落的晚上一遍一遍数我的寂寞。</p>
-                    </p>
-                </div>
-                <span class="dateview">2015-07-18</span>
-            </ul>
-
- -->
-
-
-
-   <!--  <div class="page">
-  		<li>首页</li>
-        <li class="thisclass">1</li>
-        <li><a href='/'>2</a></li>
-        <li><a href='/'>下一页</a></li>
-        <li><a href='/'>末页</a></li>
-        <li><select name='sldd' style='width:36px' onchange='location.href=this.options[this.selectedIndex].value;'>
-        <option value='list_3_1.html' selected>1</option>
-        <option value='list_3_2.html'>2</option>
-        </select></li>
-        <li><span class="pageinfo">共 <strong>2</strong>页<strong>22</strong>条</span></li>
-  	</div>-->
     <div class="page" style='width: 600px;margin-left:30%;' id='footer'></div>
   </div>
  </div>
@@ -123,7 +87,7 @@ s.parentNode.insertBefore(hm, s);
       	<h3><span>[<a href="http://wpa.qq.com/msgrd?v=3&uin=1169763240&site=qq&menu=yes" target="_blank">申请友情链接</a>]</span>友情链接</h3>
       <ul>
       <li class="yqlj">友情链接:</li>
-        <li><a href='http://zizhuling.cn' target='_blank'>何彪个人博客微博</a> </li>
+        <li><a href='http://www.zizhuling.cn' target='_blank'>何彪个人博客</a> </li>
       </ul>
     </div>
 </section>
