添加在线音乐

--- a/src/main/resources/templates/blog/about.html
+++ b/src/main/resources/templates/blog/about.html
@@ -7,8 +7,11 @@
 <meta name="description" content="一个90后的我!有一颗爱玩和爱旅游的心,我喜欢在路上的感觉,人生就是一个得与失的过程,何彪个人博客个人博客来分享我在学习和旅行的一些心得与在路上中的心情,一起来分享你们在工作中、生活中、学习中各种的心得与精彩" />
 <link href="/css/base.css" rel="stylesheet">
 <link href="/css/about.css" rel="stylesheet">
+
+  <!--时间Css-->
+<link href="/css/View.css" rel="stylesheet">
 <!-- 返回顶部调用 begin -->
-<script type="text/javascript" src="/js/jquery.1.4.2-min.js"></script>
+<script type="text/javascript" src="/js/jquery-3.3.1.js"></script>
 <script type="text/javascript" src="/js/js.js"></script>
 <script src="/js/swfobject_modified.js" type="text/javascript"></script>
 <!-- 返回顶部调用 end-->
@@ -26,6 +29,7 @@
     <a href="/learn" title="学无止境"><span>学无止境</span><span class="en"></span></a>
     <a href="/photo" title="相册"><span>相册</span><span class="en"></span></a>
     <a href="/saying" title="留言板"><span>留言板</span><span class="en"></span></a>
+    <a href="http://blog.zizhuling.cn" title="旧版博客" target='_blank'><span>旧版博客</span><span class="en"></span></a>
   </nav>
 </header>
 <!--header--> 
@@ -132,10 +136,10 @@ document.write("<font color=red>"+daysold+"</font>天 !");
       <h3>关注我</h3>
       <div class="gzwm">
         <ul>
-          <li><a class="xlwb" href="/" target="_blank">新浪微博</a></li>
-          <li><a class="txwb" href="/" target="_blank">腾讯微博</a></li>
-          <li><a class="rss" href="/" target="_blank">RSS</a></li>
-          <li><a class="wx" href="/">邮箱</a></li>
+          <li><a class="xlwb" href="https://weibo.com/u/5863925408?refer_flag=1001030103_&is_all=1" target="_blank">新浪微博</a></li>
+          <li><a class="txwb" href="http://t.qq.com/HB1169763240" target="_blank">腾讯微博</a></li>
+          <li><a class="rss" href="https://www.inoreader.com/folder/Lifestyle" target="_blank">RSS</a></li>
+          <li><a class="wx" href="http://mail.qq.com/cgi-bin/qm_share?t=qm_mailme&email=1169763240@qq.com" target="_blank">邮箱</a></li>
         </ul>
       </div>
     </div>
@@ -150,12 +154,72 @@ document.write("<font color=red>"+daysold+"</font>天 !");
         网页美工</p>
       <p>喜欢的书：《红与黑》《红楼梦》</p>
       <p>喜欢的音乐：《十年》《喜欢你》《海阔天空》《你的背包》</p>
+      <p><a href="http://wpa.qq.com/msgrd?v=3&uin=1169763240&site=qq&menu=yes" target="_blank" style="color:#FF0000;text-decoration:underline">联系作者</a></p>
+      <p>
+        <a target="_blank" href="//shang.qq.com/wpa/qunwpa?idkey=7c7c3734906c9aed9ac7e12dc985be94420ca478cb8fd12b4188cafec5362b5e">
+          <img src="/images/img/group.png" alt="何彪个人博客网站" title="何彪个人博客网站"></a>
+      </p>
+      <p>
+        <a target="_blank"
+           href="http://mail.qq.com/cgi-bin/qm_share?t=qm_mailme&amp;email=1169763240@qq.com">
+          <img src="/images/img/ico_mailme_22.png" alt="何彪个人博客网站"></a>
+      </p>
     </div>
+
+
+
+    <!-- time时间 -->
+    <div class="widget widget_custom widget_custom_clock">
+      <div class="widget_custom_content widget_clok">
+        <div class="fill">
+          <div class="reference"></div>
+          <div class="clock" id="utility-clock">
+            <div class="centre">
+              <div class="dynamic"><div class="anchor" style="transform: rotate(6deg);"><div class="element minute-line"></div></div><div class="anchor" style="transform: rotate(12deg);"><div class="element minute-line"></div></div><div class="anchor" style="transform: rotate(18deg);"><div class="element minute-line"></div></div><div class="anchor" style="transform: rotate(24deg);"><div class="element minute-line"></div></div><div class="minute-text" style="top: -116.9px; left: 67.5px;">05</div><div class="anchor" style="transform: rotate(36deg);"><div class="element minute-line"></div></div><div class="anchor" style="transform: rotate(42deg);"><div class="element minute-line"></div></div><div class="anchor" style="transform: rotate(48deg);"><div class="element minute-line"></div></div><div class="anchor" style="transform: rotate(54deg);"><div class="element minute-line"></div></div><div class="minute-text" style="top: -67.5px; left: 116.9px;">10</div><div class="anchor" style="transform: rotate(66deg);"><div class="element minute-line"></div></div><div class="anchor" style="transform: rotate(72deg);"><div class="element minute-line"></div></div><div class="anchor" style="transform: rotate(78deg);"><div class="element minute-line"></div></div><div class="anchor" style="transform: rotate(84deg);"><div class="element minute-line"></div></div><div class="minute-text" style="top: 0px; left: 135px;">15</div><div class="anchor" style="transform: rotate(96deg);"><div class="element minute-line"></div></div><div class="anchor" style="transform: rotate(102deg);"><div class="element minute-line"></div></div><div class="anchor" style="transform: rotate(108deg);"><div class="element minute-line"></div></div><div class="anchor" style="transform: rotate(114deg);"><div class="element minute-line"></div></div><div class="minute-text" style="top: 67.5px; left: 116.9px;">20</div><div class="anchor" style="transform: rotate(126deg);"><div class="element minute-line"></div></div><div class="anchor" style="transform: rotate(132deg);"><div class="element minute-line"></div></div><div class="anchor" style="transform: rotate(138deg);"><div class="element minute-line"></div></div><div class="anchor" style="transform: rotate(144deg);"><div class="element minute-line"></div></div><div class="minute-text" style="top: 116.9px; left: 67.5px;">25</div><div class="anchor" style="transform: rotate(156deg);"><div class="element minute-line"></div></div><div class="anchor" style="transform: rotate(162deg);"><div class="element minute-line"></div></div><div class="anchor" style="transform: rotate(168deg);"><div class="element minute-line"></div></div><div class="anchor" style="transform: rotate(174deg);"><div class="element minute-line"></div></div><div class="minute-text" style="top: 135px; left: 0px;">30</div><div class="anchor" style="transform: rotate(186deg);"><div class="element minute-line"></div></div><div class="anchor" style="transform: rotate(192deg);"><div class="element minute-line"></div></div><div class="anchor" style="transform: rotate(198deg);"><div class="element minute-line"></div></div><div class="anchor" style="transform: rotate(204deg);"><div class="element minute-line"></div></div><div class="minute-text" style="top: 116.9px; left: -67.5px;">35</div><div class="anchor" style="transform: rotate(216deg);"><div class="element minute-line"></div></div><div class="anchor" style="transform: rotate(222deg);"><div class="element minute-line"></div></div><div class="anchor" style="transform: rotate(228deg);"><div class="element minute-line"></div></div><div class="anchor" style="transform: rotate(234deg);"><div class="element minute-line"></div></div><div class="minute-text" style="top: 67.5px; left: -116.9px;">40</div><div class="anchor" style="transform: rotate(246deg);"><div class="element minute-line"></div></div><div class="anchor" style="transform: rotate(252deg);"><div class="element minute-line"></div></div><div class="anchor" style="transform: rotate(258deg);"><div class="element minute-line"></div></div><div class="anchor" style="transform: rotate(264deg);"><div class="element minute-line"></div></div><div class="minute-text" style="top: 0px; left: -135px;">45</div><div class="anchor" style="transform: rotate(276deg);"><div class="element minute-line"></div></div><div class="anchor" style="transform: rotate(282deg);"><div class="element minute-line"></div></div><div class="anchor" style="transform: rotate(288deg);"><div class="element minute-line"></div></div><div class="anchor" style="transform: rotate(294deg);"><div class="element minute-line"></div></div><div class="minute-text" style="top: -67.5px; left: -116.9px;">50</div><div class="anchor" style="transform: rotate(306deg);"><div class="element minute-line"></div></div><div class="anchor" style="transform: rotate(312deg);"><div class="element minute-line"></div></div><div class="anchor" style="transform: rotate(318deg);"><div class="element minute-line"></div></div><div class="anchor" style="transform: rotate(324deg);"><div class="element minute-line"></div></div><div class="minute-text" style="top: -116.9px; left: -67.5px;">55</div><div class="anchor" style="transform: rotate(336deg);"><div class="element minute-line"></div></div><div class="anchor" style="transform: rotate(342deg);"><div class="element minute-line"></div></div><div class="anchor" style="transform: rotate(348deg);"><div class="element minute-line"></div></div><div class="anchor" style="transform: rotate(354deg);"><div class="element minute-line"></div></div><div class="minute-text" style="top: -135px; left: 0px;">60</div><div class="hour-text hour-1" style="top: -90.9px; left: 52.5px;">1</div><div class="hour-text hour-2" style="top: -52.5px; left: 90.9px;">2</div><div class="hour-text hour-3" style="top: 0px; left: 105px;">3</div><div class="hour-text hour-4" style="top: 52.5px; left: 90.9px;">4</div><div class="hour-text hour-5" style="top: 90.9px; left: 52.5px;">5</div><div class="hour-text hour-6" style="top: 105px; left: 0px;">6</div><div class="hour-text hour-7" style="top: 90.9px; left: -52.5px;">7</div><div class="hour-text hour-8" style="top: 52.5px; left: -90.9px;">8</div><div class="hour-text hour-9" style="top: 0px; left: -105px;">9</div><div class="hour-text hour-10" style="top: -52.5px; left: -90.9px;">10</div><div class="hour-text hour-11" style="top: -90.9px; left: -52.5px;">11</div><div class="hour-text hour-12" style="top: -105px; left: 0px;">12</div></div>
+              <div class="expand round circle-1"></div>
+              <div class="anchor hour" style="transform: rotate(482.433deg);">
+                <div class="element thin-hand"></div>
+                <div class="element fat-hand"></div>
+              </div>
+              <div class="anchor minute" style="transform: rotate(5789.2deg);">
+                <div class="element thin-hand"></div>
+                <div class="element fat-hand minute-hand"></div>
+              </div>
+              <div class="anchor second" style="transform: rotate(347352deg);">
+                <div class="element second-hand"></div>
+              </div>
+              <div class="expand round circle-2"></div>
+              <div class="expand round circle-3"></div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+
+
   </aside>
 </article>
 <footer>
   <p class="ft-copyright">何彪个人博客 Sunshine &nbsp;&nbsp;鄂ICP备18012534号</p>
   <div id="tbox"> <a id="togbook" href=""></a> <a id="gotop" href="javascript:void(0)"></a> </div>
 </footer>
+<!--蒲公英-->
+<script color="255,0,0" opacity="0.7" zindex="-2" count="150" src="/js/canvas-nest.min.js"></script><canvas id="c_n6" width="2048" height="962" style="position: fixed; top: 0px; left: 0px; z-index: -2; opacity: 0.7;"></canvas>
+
+<!--时间-->
+<script type="text/javascript">
+    window._info = {
+        'maxWidth':1250,
+        'isLogin':0,
+        'url':'https://www.zizhuling.cn',
+        'isCommentCheck':0,
+        'openMotto':false,
+    };
+</script>
+<!--时间-->
+<script src="/js/clock.min.js"></script>
+
 </body>
 </html>
