--- a/src/main/resources/templates/blog/tags.html
+++ b/src/main/resources/templates/blog/tags.html
@@ -44,6 +44,7 @@ s.parentNode.insertBefore(hm, s);
 		  <a href="/learn" title="学无止境"><span>学无止境</span><span class="en"></span></a>
 		  <a href="/photo" title="相册"><span>相册</span><span class="en"></span></a>
 		  <a href="/saying" title="留言板"><span>留言板</span><span class="en"></span></a>
+		  <a href="http://blog.zizhuling.cn" title="旧版博客" target='_blank'><span>旧版博客</span><span class="en"></span></a>
       </nav>
 </header>
 <!--header-->
@@ -55,7 +56,7 @@ s.parentNode.insertBefore(hm, s);
         <span>您当前的位置：<a href="/index">首页</a> &gt; TAG标签
         </span>
         <a href="/index" class="n1">网站首页</a>
-        <a class="n2">日记</a>
+        <a class="n2">TAG标签</a>
   </h1>
   <div class="index_about">
     <h2 class="c_titile">全部TAG标签</h2>
@@ -943,5 +944,7 @@ s.parentNode.insertBefore(hm, s);
 <script type="text/javascript">
 swfobject.registerObject("FlashID");
 </script>
+<script color="255,0,0" opacity="0.7" zindex="-2" count="150" src="/js/canvas-nest.min.js"></script><canvas id="c_n6" width="2048" height="962" style="position: fixed; top: 0px; left: 0px; z-index: -2; opacity: 0.7;"></canvas>
+
 </body>
 </html>
