--- a/src/main/resources/templates/blog/index.html
+++ b/src/main/resources/templates/blog/index.html
@@ -42,6 +42,7 @@ body, td, th {
     <a href="/learn" title="学无止境"><span>学无止境</span><span class="en"></span></a>
     <a href="/photo" title="相册"><span>相册</span><span class="en"></span></a>
     <a href="/saying" title="留言板"><span>留言板</span><span class="en"></span></a>
+    <a href="http://blog.zizhuling.cn" title="旧版博客" target='_blank'><span>旧版博客</span><span class="en"></span></a>
   </nav>
 </header>
 <!--header--> 
@@ -57,7 +58,7 @@ body, td, th {
       <p>"来来来，握紧我的手，带你去看这世界"。</p>
       <p>生命匆匆，跟随心态，想去即去，想留则留。只为不枉自己 </p>
     </ul>
-    <div class="avatar"><a href="/"><span>何彪个人博客</span></a></div>
+    <div class="avatar"><a href="/index"><span>何彪个人博客</span></a></div>
   </section>
 </div>
 <!--banner广告-->
@@ -66,19 +67,19 @@ body, td, th {
   <div class="time_axis"></div>
   <ul>
     <li class="n1"><a href="/" target="_blank">相遇</a>
-      <div class="dateview">2014-06-27</div>
+      <div class="dateview">2013-09-01</div>
     </li>
     <li class="n2"><a href="/" target="_blank">相识</a>
       <div class="dateview">2015-07-04</div>
     </li>
     <li class="n3"><a href="/" target="_blank">相知</a>
-      <div class="dateview">2016-10-01</div>
+      <div class="dateview">2017-07-01</div>
     </li>
     <li class="n4"><a href="/" target="_blank">相恋</a>
-      <div class="dateview">2017-02-14</div>
+      <div class="dateview">2018-04-30</div>
     </li>
     <li class="n5"><a href="/" target="_blank">相爱</a>
-      <div class="dateview">2018-3-05</div>
+      <div class="dateview">2019-01-01</div>
     </li>
   </ul>
 </div>
@@ -90,91 +91,7 @@ body, td, th {
   <div class="l_box f_l"> 
     <!--topnews内容-->
     <div class="topnews" id="findIndex">
-      <!--<h2> <b>今日</b>推荐 </h2>
 
-      <div class="blogs">
-        <figure><a href='/' class='preview'><img src='/images/1447642404150745-lp.png'/></a> </figure>
-        <h3><a href="/">给我一个答案</a></h3>
-        <p>此时此刻，我的内心是崩溃的。本来已经在回学校的路上，但是我却没赶上大巴，导致我滞留在候车室。...</p>
-        <ul>
-          <p class="autor"> <span class="lm f_l"><a href="/">忙里偷闲</a></span> <span class="dtime f_l">2015-11-16</span> <span class="viewnum f_l">浏览（88）</span> <span class="pingl f_l">评论（<a>0</a>）</span> </p>
-        </ul>
-      </div>
-
-
-      <div class="blogs">
-        <figure><a href='/' class='preview'><img src='/images/1447642096207160-lp.png'/></a> </figure>
-        <h3><a href="/">生活是什么？</a></h3>
-        <p>生活是什么？有人说，生活生活，就是生下来活下去，也有人说，生容易，活容易，生活不容易。...</p>
-        <ul>
-          <p class="autor"> <span class="lm f_l"><a href="/">享受慢活</a></span> <span class="dtime f_l">2015-11-16</span> <span class="viewnum f_l">浏览（57）</span> <span class="pingl f_l">评论（<a>0</a>）</span> </p>
-        </ul>
-      </div>
-      <div class="blogs">
-        <figure><a href='/' class='preview'><img src='/images/1447641406565685-lp.jpg'/></a> </figure>
-        <h3><a href="/">那些不是事</a></h3>
-        <p>人生，原本就该这样。再大的事，无非是个经历而己。明天的太阳照样升起，就像罗俊杰个人博客​的时候水来土掩，兵来将挡。任何事情都会成为过去，只要有好的心态，就可以面对人生的...</p>
-        <ul>
-          <p class="autor"> <span class="lm f_l"><a href="/">慢阅读</a></span> <span class="dtime f_l">2015-11-16</span> <span class="viewnum f_l">浏览（123）</span> <span class="pingl f_l">评论（<a>0</a>）</span> </p>
-        </ul>
-      </div>
-      <div class="blogs">
-        <figure><a href='/' class='preview'><img src='/images/1442642178239101-lp.jpg'/></a> </figure>
-        <h3><a href="/">路·过-喜欢在路上</a></h3>
-        <p>注定，有些路，只能一个人走；有些事，只能一个人扛。因为我喜欢在路上！走在林间小道上，一个人，晃晃悠悠，无所适从，看着那些在风中微微呻吟着的落叶，远远望去，像一群疲...</p>
-        <ul>
-          <p class="autor"> <span class="lm f_l"><a href="/">悠客</a></span> <span class="dtime f_l">2015-09-19</span> <span class="viewnum f_l">浏览（109）</span> <span class="pingl f_l">评论（<a>0</a>）</span> </p>
-        </ul>
-      </div>
-      <div class="blogs">
-        <figure><a href='/' class='preview'><img src='/images/1442641275653897-lp.jpg'/></a> </figure>
-        <h3><a href="/">人生因分享,人生因分享的风景</a></h3>
-        <p>人生的风景，该以怎样的笔墨去形容，以怎样的目光去审视，以怎样的灵魂去容纳？人生因分享，而永远都是那般的美好：生命中本就有许多无可奈何的悲伤和痛苦。路本是同样的路，...</p>
-        <ul>
-          <p class="autor"> <span class="lm f_l"><a href="/">慢阅读</a></span> <span class="dtime f_l">2015-09-19</span> <span class="viewnum f_l">浏览（178）</span> <span class="pingl f_l">评论（<a>0</a>）</span> </p>
-        </ul>
-      </div>
-      <div class="blogs">
-        <figure> </figure>
-        <h3><a href="/">跟着自己的心走</a></h3>
-        <p>今天就来和大家一起分享一下我个人的心中的所想和所见所闻把！喜欢幽静的小草，却总是邂逅那些鲜艳的花朵；喜欢那种静谧，却一直徘徊在喧嚣的世界；喜欢一种素净，却一直面对...</p>
-        <ul>
-          <p class="autor"> <span class="lm f_l"><a href="/">享受慢活</a></span> <span class="dtime f_l">2015-09-18</span> <span class="viewnum f_l">浏览（66）</span> <span class="pingl f_l">评论（<a>0</a>）</span> </p>
-        </ul>
-      </div>
-      <div class="blogs">
-        <figure><a href='/' class='preview'><img src='/images/1442539025939884-lp.jpg'/></a> </figure>
-        <h3><a href="/">只想，留住心中的那份静美</a></h3>
-        <p>在这个鸟语花香的季节,踏着早晨罗俊杰个人博客的一缕光芒在小路间走着,呼吸着这自然的清晰空气，只想，衣袂飘飘，信步于绿荫小道，或俯首听花开，或低眉赏花香，盈脉脉春意，于眼波中...</p>
-        <ul>
-          <p class="autor"> <span class="lm f_l"><a href="/">享受慢活</a></span> <span class="dtime f_l">2015-09-18</span> <span class="viewnum f_l">浏览（196）</span> <span class="pingl f_l">评论（<a>0</a>）</span> </p>
-        </ul>
-      </div>
-      <div class="blogs">
-        <figure><a href='/' class='preview'><img src='/images/1442457564979540.jpeg'/></a> </figure>
-        <h3><a href="/">走村窜寨- 一路黔行之黔东南</a></h3>
-        <p>很早之前就计划国庆和小伙伴们自驾梅里雪山，线路安排都已打上了行程，不幸计划没有变化快，八月底香格里拉的地震把全盘计划打乱了，小伙伴们鸟做兽散，拍屁股各走各的新路线...</p>
-        <ul>
-          <p class="autor"> <span class="lm f_l"><a href="/">闲暇时光</a></span> <span class="dtime f_l">2015-09-17</span> <span class="viewnum f_l">浏览（180）</span> <span class="pingl f_l">评论（<a>0</a>）</span> </p>
-        </ul>
-      </div>
-      <div class="blogs">
-        <figure><a href='/' class='preview'><img src='/images/1442368731721857-lp.jpg'/></a> </figure>
-        <h3><a href="/">人生因为有残缺，所以才会美</a></h3>
-        <p>人，越简单就会越快乐;水，掺杂东西越少才会显得清澈靓丽。大自然越安静,才会体现它的本质。人生就是这样，倘若有运，不用祈求，因为祈求也是无用。倘若无运，无需悲伤，因为悲...</p>
-        <ul>
-          <p class="autor"> <span class="lm f_l"><a href="/">慢阅读</a></span> <span class="dtime f_l">2015-09-16</span> <span class="viewnum f_l">浏览（184）</span> <span class="pingl f_l">评论（<a>0</a>）</span> </p>
-        </ul>
-      </div>
-      <div class="blogs">
-        <figure><a href='/' class='preview'><img src='/images/1442201163344838-lp.jpg'/></a> </figure>
-        <h3><a href="/">分享逗逼三人游云南旅行</a></h3>
-        <p>不尽感叹时间的飞速，还没有准备好一切就要开始启程，就这样和两位逗逼一起来一趟说走就走的旅行。选择云南源于对香格里拉的的情怀，听说那是早晨罗俊杰个人博客第一缕阳光洒进的地...</p>
-        <ul>
-          <p class="autor"> <span class="lm f_l"><a href="/">闲暇时光</a></span> <span class="dtime f_l">2015-09-14</span> <span class="viewnum f_l">浏览（188）</span> <span class="pingl f_l">评论（<a>0</a>）</span> </p>
-        </ul>
-      </div>-->
-      
       <!--topnews内容-->
       
       <div class="links">
@@ -206,32 +123,37 @@ body, td, th {
       </div>
     </div>
     <script type="text/javascript" src="/js/jia.js" charset="utf-8"></script> 
-    <!--tit01 end--> 
-    
+    <!--tit01 end-->
+    <!--添加音乐-->
+    <div class="tit01">
+      <h3><a href="/music" style="color:#FF0000;text-decoration:underline">在线音乐</a></h3>
+      <iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width="300" height="110" src="http://music.163.com/outchain/player?type=0&amp;id=2067759214&amp;auto=1&amp;height=90"></iframe>
+    </div>
+
     <!--天气-->
     <div class="weather">
       <iframe width="250" scrolling="no" height="60" frameborder="0" allowtransparency="true" src="http://i.tianqi.com/index.php?c=code&id=12&icon=1&num=1"></iframe>
     </div>
-    <div class="moreSelect" id="lp_right_select"> 
+    <div class="moreSelect" id="lp_right_select">
       <script>
-window.onload = function ()
-{
-	var oLi = document.getElementById("tab").getElementsByTagName("li");
-	var oUl = document.getElementById("ms-main").getElementsByTagName("div");
-	
-	for(var i = 0; i < oLi.length; i++)
-	{
-		oLi[i].index = i;
-		oLi[i].onmouseover = function ()
-		{
-			for(var n = 0; n < oLi.length; n++) oLi[n].className="";
-			this.className = "cur";
-			for(var n = 0; n < oUl.length; n++) oUl[n].style.display = "none";
-			oUl[this.index].style.display = "block"
-		}	
-	}
-}
-</script>
+            window.onload = function ()
+            {
+                var oLi = document.getElementById("tab").getElementsByTagName("li");
+                var oUl = document.getElementById("ms-main").getElementsByTagName("div");
+
+                for(var i = 0; i < oLi.length; i++)
+                {
+                    oLi[i].index = i;
+                    oLi[i].onmouseover = function ()
+                    {
+                        for(var n = 0; n < oLi.length; n++) oLi[n].className="";
+                        this.className = "cur";
+                        for(var n = 0; n < oUl.length; n++) oUl[n].style.display = "none";
+                        oUl[this.index].style.display = "block"
+                    }
+                }
+            }
+      </script>
       <div class="ms-top">
         <ul class="hd" id="tab">
           <li class="cur"><a href="#">点击排行</a></li>
@@ -367,5 +289,6 @@ window.onload = function ()
 swfobject.registerObject("FlashID");
 </script>
 <script src="/js/index.js" type="text/javascript"></script>
+<script color="255,0,0" opacity="0.7" zindex="-2" count="150" src="/js/canvas-nest.min.js"></script><canvas id="c_n6" width="2048" height="962" style="position: fixed; top: 0px; left: 0px; z-index: -2; opacity: 0.7;"></canvas>
 </body>
 </html>
