--- a/src/main/resources/templates/blog/photo.html
+++ b/src/main/resources/templates/blog/photo.html
@@ -51,6 +51,7 @@ s.parentNode.insertBefore(hm, s);
           <a href="/learn" title="学无止境"><span>学无止境</span><span class="en"></span></a>
           <a href="/photo" title="相册"><span>相册</span><span class="en"></span></a>
           <a href="/saying" title="留言板"><span>留言板</span><span class="en"></span></a>
+          <a href="http://blog.zizhuling.cn" title="旧版博客" target='_blank'><span>旧版博客</span><span class="en"></span></a>
       </nav>
 </header>
 <!--header-->
@@ -529,5 +530,7 @@ swfobject.registerObject("FlashID");
 </script>
 <script src="/js/vue.js" type="text/javascript"></script>
 <script src="/js/photo.js" type="text/javascript"></script>
+<script color="255,0,0" opacity="0.7" zindex="-2" count="150" src="/js/canvas-nest.min.js"></script><canvas id="c_n6" width="2048" height="962" style="position: fixed; top: 0px; left: 0px; z-index: -2; opacity: 0.7;"></canvas>
+
 </body>
 </html>
