--- a/src/main/resources/templates/blog/saying.html
+++ b/src/main/resources/templates/blog/saying.html
@@ -29,6 +29,7 @@
           <a href="/learn" title="学无止境"><span>学无止境</span><span class="en"></span></a>
           <a href="/photo" title="相册"><span>相册</span><span class="en"></span></a>
           <a href="/saying" title="留言板"><span>留言板</span><span class="en"></span></a>
+          <a href="http://blog.zizhuling.cn" title="旧版博客" target='_blank'><span>旧版博客</span><span class="en"></span></a>
       </nav>
 </header>
 <!--header-->
@@ -75,7 +76,6 @@ var duoshuoQuery = {short_name:"aiwke"};
         </script>
 
 
-
     </div>
     <aside class="right">
     	<div class="tit01">
@@ -115,6 +115,16 @@ var duoshuoQuery = {short_name:"aiwke"};
 					           网页美工</p>
             <p>喜欢的书：《红与黑》《红楼梦》</p>
             <p>喜欢的音乐：《十年》《喜欢你》《海阔天空》《你的背包》</p>
+            <p><a href="http://wpa.qq.com/msgrd?v=3&uin=1169763240&site=qq&menu=yes" target="_blank" style="color:#FF0000;text-decoration:underline">联系作者</a></p>
+            <p>
+                 <a target="_blank" href="//shang.qq.com/wpa/qunwpa?idkey=7c7c3734906c9aed9ac7e12dc985be94420ca478cb8fd12b4188cafec5362b5e">
+                     <img src="/images/img/group.png" alt="何彪个人博客网站" title="何彪个人博客网站"></a>
+            </p>
+            <p>
+                 <a target="_blank"
+                    href="http://mail.qq.com/cgi-bin/qm_share?t=qm_mailme&amp;email=1169763240@qq.com">
+                     <img src="/images/img/ico_mailme_22.png" alt="何彪个人博客网站"></a>
+            </p>
         </div> 
     </div>
     </aside>
@@ -127,5 +137,7 @@ var duoshuoQuery = {short_name:"aiwke"};
 <script type="text/javascript">
 new slider({id:'slider'})
 </script>
+<script color="255,0,0" opacity="0.7" zindex="-2" count="150" src="/js/canvas-nest.min.js"></script><canvas id="c_n6" width="2048" height="962" style="position: fixed; top: 0px; left: 0px; z-index: -2; opacity: 0.7;"></canvas>
+
 </body>
 </html>
