--- a/src/main/resources/templates/blog/life_article.html
+++ b/src/main/resources/templates/blog/life_article.html
@@ -48,7 +48,7 @@
   <div class="index_about">
     <h2 class="c_titile" th:text="${list.title}"></h2>
     <p class="box_c">
-        <span class="d_time">发布时间：<span th:text="${list.gtmcreate}"></span></span>
+        <span class="d_time">发布时间：<span th:text="${list.gtmmodified}"></span></span>
         <span>编辑：<span th:text="${list.author}"></span>个人博客</span>
         <span>互动QQ群：<a>792320700</a>
        <span>浏览次数：<span th:text="${list.reading}"></span></span>
