--- a/src/main/resources/templates/blog/about.html
+++ b/src/main/resources/templates/blog/about.html
@@ -28,8 +28,8 @@
     <a href="/doing" title="忙里偷闲"><span>忙里偷闲</span><span class="en"></span></a>
     <a href="/learn" title="学无止境"><span>学无止境</span><span class="en"></span></a>
     <a href="/photo" title="相册"><span>相册</span><span class="en"></span></a>
+    <a href="/music" title="在线音乐"><span>在线音乐</span><span class="en"></span></a>
     <a href="/saying" title="留言板"><span>留言板</span><span class="en"></span></a>
-    <a href="http://blog.zizhuling.cn" title="旧版博客" target='_blank'><span>旧版博客</span><span class="en"></span></a>
   </nav>
 </header>
 <!--header--> 
@@ -220,6 +220,7 @@ document.write("<font color=red>"+daysold+"</font>天 !");
 </script>
 <!--时间-->
 <script src="/js/clock.min.js"></script>
-
+<!--双击文字特效-->
+<script src="/js/striveboybiao-text.js"></script>
 </body>
 </html>
