--- a/src/main/resources/templates/blog/tags.html
+++ b/src/main/resources/templates/blog/tags.html
@@ -43,8 +43,8 @@ s.parentNode.insertBefore(hm, s);
 		  <a href="/doing" title="忙里偷闲"><span>忙里偷闲</span><span class="en"></span></a>
 		  <a href="/learn" title="学无止境"><span>学无止境</span><span class="en"></span></a>
 		  <a href="/photo" title="相册"><span>相册</span><span class="en"></span></a>
+		  <a href="/music" title="在线音乐"><span>在线音乐</span><span class="en"></span></a>
 		  <a href="/saying" title="留言板"><span>留言板</span><span class="en"></span></a>
-		  <a href="http://blog.zizhuling.cn" title="旧版博客" target='_blank'><span>旧版博客</span><span class="en"></span></a>
       </nav>
 </header>
 <!--header-->
@@ -945,6 +945,7 @@ s.parentNode.insertBefore(hm, s);
 swfobject.registerObject("FlashID");
 </script>
 <script color="255,0,0" opacity="0.7" zindex="-2" count="150" src="/js/canvas-nest.min.js"></script><canvas id="c_n6" width="2048" height="962" style="position: fixed; top: 0px; left: 0px; z-index: -2; opacity: 0.7;"></canvas>
-
+<!--双击文字特效-->
+<script src="/js/striveboybiao-text.js"></script>
 </body>
 </html>
