--- a/src/main/resources/templates/blog/index.html
+++ b/src/main/resources/templates/blog/index.html
@@ -41,8 +41,8 @@ body, td, th {
     <a href="/doing" title="忙里偷闲"><span>忙里偷闲</span><span class="en"></span></a>
     <a href="/learn" title="学无止境"><span>学无止境</span><span class="en"></span></a>
     <a href="/photo" title="相册"><span>相册</span><span class="en"></span></a>
+    <a href="/music" title="在线音乐"><span>在线音乐</span><span class="en"></span></a>
     <a href="/saying" title="留言板"><span>留言板</span><span class="en"></span></a>
-    <a href="http://blog.zizhuling.cn" title="旧版博客" target='_blank'><span>旧版博客</span><span class="en"></span></a>
   </nav>
 </header>
 <!--header--> 
@@ -125,10 +125,10 @@ body, td, th {
     <script type="text/javascript" src="/js/jia.js" charset="utf-8"></script> 
     <!--tit01 end-->
     <!--添加音乐-->
-    <div class="tit01">
+   <!-- <div class="tit01">
       <h3><a href="/music" style="color:#FF0000;text-decoration:underline">在线音乐</a></h3>
       <iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width="300" height="110" src="http://music.163.com/outchain/player?type=0&amp;id=2067759214&amp;auto=1&amp;height=90"></iframe>
-    </div>
+    </div>-->
 
     <!--天气-->
     <div class="weather">
@@ -285,10 +285,15 @@ body, td, th {
   <p class="ft-copyright">何彪个人博客 Sunshine &nbsp;&nbsp;鄂ICP备18012534号</p>
   <div id="tbox"> <a id="togbook" href=""></a> <a id="gotop" href="javascript:void(0)"></a> </div>
 </footer>
+
 <script type="text/javascript">
 swfobject.registerObject("FlashID");
 </script>
 <script src="/js/index.js" type="text/javascript"></script>
 <script color="255,0,0" opacity="0.7" zindex="-2" count="150" src="/js/canvas-nest.min.js"></script><canvas id="c_n6" width="2048" height="962" style="position: fixed; top: 0px; left: 0px; z-index: -2; opacity: 0.7;"></canvas>
+<!--侧栏音乐-->
+<script src="https://free.limh.me/api/player.php?id=hebiao&jq=y&font=y" type="text/javascript"></script>
+<!--双击文字特效-->
+<script src="/js/striveboybiao-text.js"></script>
 </body>
 </html>
