--- a/src/main/resources/templates/blog/photo.html
+++ b/src/main/resources/templates/blog/photo.html
@@ -15,13 +15,15 @@
 <link rel="stylesheet" href="/css/lrtk.css">
 <script src="/js/baguettebox.min.js"></script>
 <!--分享相册-->
-<script type="text/javascript" src="/js/jquery1.42.min.js"></script>
+<script type="text/javascript" src="/js/jquery-3.3.1.js"></script>
 <script type="text/javascript" src="/js/waterfall.js" ></script>
+<!--图片特效-->
+<link rel="stylesheet" href="/css/viewer.css">
+<script src="/js/viewer.js"></script>
 <!--[if lt IE 9]>
 <script src="/js/modernizr.js"></script>
 <![endif]-->
 <!-- 返回顶部调用 begin -->
-<script type="text/javascript" src="/js/jquery.1.4.2-min.js"></script>
 <script type="text/javascript" src="/js/js.js"></script>
 <script src="/js/swfobject_modified.js" type="text/javascript"></script>
 <!-- 返回顶部调用 end-->
@@ -50,8 +52,8 @@ s.parentNode.insertBefore(hm, s);
           <a href="/doing" title="忙里偷闲"><span>忙里偷闲</span><span class="en"></span></a>
           <a href="/learn" title="学无止境"><span>学无止境</span><span class="en"></span></a>
           <a href="/photo" title="相册"><span>相册</span><span class="en"></span></a>
+          <a href="/music" title="在线音乐"><span>在线音乐</span><span class="en"></span></a>
           <a href="/saying" title="留言板"><span>留言板</span><span class="en"></span></a>
-          <a href="http://blog.zizhuling.cn" title="旧版博客" target='_blank'><span>旧版博客</span><span class="en"></span></a>
       </nav>
 </header>
 <!--header-->
@@ -476,7 +478,7 @@ s.parentNode.insertBefore(hm, s);
 </article>-->
 
 
-<div class="baguetteBoxOne gallery" id="app-photo">
+<div class="baguetteBoxOne gallery" id="viewer">
         <a v-for="data in dataList">
             <img v-bind:src='data.url'>
         </a>
@@ -531,6 +533,7 @@ swfobject.registerObject("FlashID");
 <script src="/js/vue.js" type="text/javascript"></script>
 <script src="/js/photo.js" type="text/javascript"></script>
 <script color="255,0,0" opacity="0.7" zindex="-2" count="150" src="/js/canvas-nest.min.js"></script><canvas id="c_n6" width="2048" height="962" style="position: fixed; top: 0px; left: 0px; z-index: -2; opacity: 0.7;"></canvas>
-
+<!--双击文字特效-->
+<script src="/js/striveboybiao-text.js"></script>
 </body>
 </html>
