--- a/src/main/resources/templates/blog/about.html
+++ b/src/main/resources/templates/blog/about.html
@@ -222,5 +222,7 @@ document.write("<font color=red>"+daysold+"</font>天 !");
 <script src="/js/clock.min.js"></script>
 <!--双击文字特效-->
 <script src="/js/striveboybiao-text.js"></script>
+<!--下雪特效-->
+<script src="/js/striveboybiao-snow.js"></script>
 </body>
 </html>
