--- a/src/main/resources/templates/blog/index.html
+++ b/src/main/resources/templates/blog/index.html
@@ -13,7 +13,7 @@
 <script src="/js/modernizr.js"></script>
 
 <!-- 返回顶部调用 begin -->
-<script type="text/javascript" src="/js/jquery.min.js"></script>
+<script type="text/javascript" src="/js/jquery-3.3.1.js"></script>
 <script type="text/javascript" src="/js/js.js"></script>
 <script src="/js/swfobject_modified.js" type="text/javascript"></script>
 <!-- 返回顶部调用 end-->
