--- a/src/main/resources/templates/blog/life_article.html
+++ b/src/main/resources/templates/blog/life_article.html
@@ -178,5 +178,7 @@ swfobject.registerObject("FlashID");
 <script color="255,0,0" opacity="0.7" zindex="-2" count="150" src="/js/canvas-nest.min.js"></script><canvas id="c_n6" width="2048" height="962" style="position: fixed; top: 0px; left: 0px; z-index: -2; opacity: 0.7;"></canvas>
 <!--双击文字特效-->
 <script src="/js/striveboybiao-text.js"></script>
+<!--下雪特效-->
+<script src="/js/striveboybiao-snow.js"></script>
 </body>
 </html>
