--- a/src/main/resources/templates/blog/index.html
+++ b/src/main/resources/templates/blog/index.html
@@ -6,17 +6,7 @@
 <meta name="description" content="一个关注旅行，在路上寻找那个丢失自我，远离城市的喧哗，放慢脚步去享受慢生活，分享在路上所见所闻，与大家一起发现这世界的千奇百怪！" />
 <link href="/css/base1.css" rel="stylesheet">
 <link href="/css/index1.css" rel="stylesheet">
-<script type="text/javascript" src="/js/sliders.js"></script>
-<!--[if lt IE 9]>
-
-<![endif]-->
-<script src="/js/modernizr.js"></script>
-
-<!-- 返回顶部调用 begin -->
-<script type="text/javascript" src="/js/jquery-3.3.1.js"></script>
-<script type="text/javascript" src="/js/js.js"></script>
-<script src="/js/swfobject_modified.js" type="text/javascript"></script>
-<!-- 返回顶部调用 end-->
+<link href="/css/striveboybiao-xf.css" rel="stylesheet">
 
 <link rel="shortcut icon" href="/favicon.ico"/>
 <link rel="bookmark" href="/favicon.ico"/>
@@ -88,7 +78,16 @@ body, td, th {
 <article> 
   
   <!--l_box-left开始-->
-  <div class="l_box f_l"> 
+  <div class="l_box f_l">
+
+    <!--数据加载特效-->
+    <div class="sk-folding-cube" id="xf">
+      <div class="sk-cube1 sk-cube"></div>
+      <div class="sk-cube2 sk-cube"></div>
+      <div class="sk-cube4 sk-cube"></div>
+      <div class="sk-cube3 sk-cube"></div>
+    </div>
+
     <!--topnews内容-->
     <div class="topnews" id="findIndex">
 
@@ -285,6 +284,18 @@ body, td, th {
   <p class="ft-copyright">何彪个人博客 Sunshine &nbsp;&nbsp;鄂ICP备18012534号</p>
   <div id="tbox"> <a id="togbook" href=""></a> <a id="gotop" href="javascript:void(0)"></a> </div>
 </footer>
+
+<script type="text/javascript" src="/js/sliders.js"></script>
+<!--[if lt IE 9]>
+
+<![endif]-->
+<script src="/js/modernizr.js"></script>
+
+<!-- 返回顶部调用 begin -->
+<script type="text/javascript" src="/js/jquery-3.3.1.js"></script>
+<script type="text/javascript" src="/js/js.js"></script>
+<script src="/js/swfobject_modified.js" type="text/javascript"></script>
+<!-- 返回顶部调用 end-->
 
 <script type="text/javascript">
 swfobject.registerObject("FlashID");
