--- a/src/main/resources/templates/blog/learn.html
+++ b/src/main/resources/templates/blog/learn.html
@@ -2,19 +2,12 @@
 <html>
 <head>
 <title>学无止境-何彪个人博客-一个开启你记录旅行的足迹和分享途中所见所闻，与探讨互联网神秘技术的网站</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content="何彪个人博客,分享旅行,喜欢在路上,旅游,慢生活,所见所闻,千奇百怪,罗俊杰个人博客博客" />
 <meta name="description" content="一个关注旅行，在路上寻找那个丢失自我，远离城市的喧哗，放慢脚步去享受慢生活，分享在路上所见所闻，与大家一起发现这世界的千奇百怪！" />
 <link href="/css/base.css" rel="stylesheet">	
 <link href="/css/learn.css" rel="stylesheet">
-<!--[if lt IE 9]>
-<script src="/js/modernizr.js"></script>
-<![endif]-->
-<!-- 返回顶部调用 begin -->
-<script type="text/javascript" src="/js/jquery.1.4.2-min.js"></script>
-<script type="text/javascript" src="/js/js.js"></script>
-<script src="/js/swfobject_modified.js" type="text/javascript"></script>
-<!-- 返回顶部调用 end-->
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<link href="/css/striveboybiao-xf.css" rel="stylesheet">
 
 </head>
 <body>
@@ -39,6 +32,13 @@
 <article class="blogs" id="app-learn">
 	<h1 class="t_nav"><span>"理无专在，而学无止境也，然则问可少耶？"</span><a class="n1" href="/index" title="网站首页">网站首页</a><a class="n2" href="#" title="学无止境">学无止境</a></h1>
     <div class="newblog left">
+        <!--数据加载特效-->
+        <div class="sk-folding-cube" id="xf">
+            <div class="sk-cube1 sk-cube"></div>
+            <div class="sk-cube2 sk-cube"></div>
+            <div class="sk-cube4 sk-cube"></div>
+            <div class="sk-cube3 sk-cube"></div>
+        </div>
 
         <template v-for="data in dataList">
             <h2><a v-bind:title="data.title" v-bind:href="bindsrc(data.cid)">{{data.title}}</a></h2>
@@ -137,6 +137,15 @@
 <div id="tbox">
 <a id="" href="" ></a> <a id="gotop" href="javascript:void(0)"></a> </div>
 </footer>
+<!--[if lt IE 9]>
+<script src="/js/modernizr.js"></script>
+<![endif]-->
+<!-- 返回顶部调用 begin -->
+<script type="text/javascript" src="/js/jquery.1.4.2-min.js"></script>
+<script type="text/javascript" src="/js/js.js"></script>
+<script src="/js/swfobject_modified.js" type="text/javascript"></script>
+<!-- 返回顶部调用 end-->
+
 <script src="/js/silder.js"></script>
 <script src="/js/i.js" type="text/javascript"></script>
 <script type="text/javascript">
