--- a/src/main/resources/templates/blog/life.html
+++ b/src/main/resources/templates/blog/life.html
@@ -7,24 +7,17 @@
 <meta name="description" content="一个关注旅行，在路上寻找那个丢失自我，远离城市的喧哗，放慢脚步去享受慢生活，分享在路上所见所闻，与大家一起发现这世界的千奇百怪！" />
 <link href="/css/base.css" rel="stylesheet">
 <link href="/css/style.css" rel="stylesheet">
-<!--[if lt IE 9]>
-<script src="/js/modernizr.js"></script>
-<![endif]-->
-<!-- 返回顶部调用 begin -->
-<script type="text/javascript" src="/js/jquery.1.4.2-min.js"></script>
-<script type="text/javascript" src="/js/js.js"></script>
-<script src="/js/swfobject_modified.js" type="text/javascript"></script>
-<!-- 返回顶部调用 end-->
+<link href="/css/striveboybiao-xf.css" rel="stylesheet">
 
 <!-- aiwke.com Baidu tongji analytics -->
 <script>
-var _hmt = _hmt || [];
-(function() {
-var hm = document.createElement("script");
-hm.src = "//hm.baidu.com/hm.js?ba0e885cd446efa2323e5ab6986951da";
-var s = document.getElementsByTagName("script")[0];
-s.parentNode.insertBefore(hm, s);
-})();
+    var _hmt = _hmt || [];
+    (function() {
+    var hm = document.createElement("script");
+    hm.src = "//hm.baidu.com/hm.js?ba0e885cd446efa2323e5ab6986951da";
+    var s = document.getElementsByTagName("script")[0];
+    s.parentNode.insertBefore(hm, s);
+    })();
 </script>
 
 </head>
@@ -70,6 +63,14 @@ s.parentNode.insertBefore(hm, s);
          <p>文章<span>推荐</span></p>
     </h2>
 	<div class="newblog left">
+        <!--数据加载特效-->
+        <div class="sk-folding-cube" id="xf">
+            <div class="sk-cube1 sk-cube"></div>
+            <div class="sk-cube2 sk-cube"></div>
+            <div class="sk-cube4 sk-cube"></div>
+            <div class="sk-cube3 sk-cube"></div>
+        </div>
+
     	<!--左left开始-->
         <template v-for="data in dataList">
             <h2><a v-bind:title="data.title" v-bind:href="bindsrc(data.cid)">{{data.title}}</a></h2>
@@ -139,6 +140,14 @@ s.parentNode.insertBefore(hm, s);
   <p class="ft-copyright">何彪个人博客 Sunshine &nbsp;&nbsp;鄂ICP备18012534号</p>
 <div id="tbox"> <a id="togbook" href=""></a> <a id="gotop" href="javascript:void(0)"></a> </div>
 </footer>
+<!--[if lt IE 9]>
+<script src="/js/modernizr.js"></script>
+<![endif]-->
+<!-- 返回顶部调用 begin -->
+<script type="text/javascript" src="/js/jquery.1.4.2-min.js"></script>
+<script type="text/javascript" src="/js/js.js"></script>
+<script src="/js/swfobject_modified.js" type="text/javascript"></script>
+<!-- 返回顶部调用 end-->
 <script src="/js/silder.js"></script>
 <script type="text/javascript">
 swfobject.registerObject("FlashID");
