--- a/src/main/resources/templates/blog/index.html
+++ b/src/main/resources/templates/blog/index.html
@@ -93,18 +93,18 @@ body, td, th {
 
       <!--topnews内容-->
       
-      <div class="links">
-        <h3><span>[<a href="/">申请友情链接</a>]</span>友情链接</h3>
-        <ul>
-          <li><a href='/' target='_blank'>何彪个人博客微博</a> </li>
-          <li><a href='/' target='_blank'>QQ个性网</a> </li>
-          <li><a href='http://www.zizhuling.cn' target='_blank'>网站目录</a> </li>
-          <li><a href='/' target='_blank'>0hacker</a> </li>
-          <li><a href='/' target='_blank'>贵阳IT信息网</a> </li>
-          <li><a href='/' target='_blank'>南宁风云网</a> </li>
-          <li><a href='/' target='_blank'>杨青的博客</a> </li>
-        </ul>
-      </div>
+    </div>
+    <div class="links">
+      <h3><span>[<a>申请友情链接</a>]</span>友情链接</h3>
+      <ul>
+        <li><a href='https://www.yangqq.com/' target='_blank'>杨青的博客</a> </li>
+        <li><a href='https://www.wangzhijun.com.cn/' target='_blank'>王志军博客</a> </li>
+        <li><a href='https://www.zbpnice.cn/' target='_blank'>柏平博客</a> </li>
+        <li><a href='http://www.mrszhao.com/' target='_blank'>赵老师博客</a> </li>
+        <li><a href='http://www.jzdlink.com/' target='_blank'>呆呆萌萌情侣博客</a> </li>
+        <li><a href='http://www.jianhuax.com/' target='_blank'>建华兄个人博客</a> </li>
+        <li><a href='http://www.sharedblog.cn/' target='_blank'>前端共享博客</a> </li>
+      </ul>
     </div>
   </div>
   <!--l_box-left结束-->
