--- a/src/main/resources/templates/blog/saying.html
+++ b/src/main/resources/templates/blog/saying.html
@@ -111,8 +111,8 @@ var duoshuoQuery = {short_name:"aiwke"};
             <p>生日：1994-08-18</p>
             <p>籍贯：湖北--孝感市</p>
             <p>现居：上海--松江区</p>
-            <p>职业：网站设计、网站制作、<br>
-					           网页美工</p>
+            <p>职业：程序师、JAVA开发、<br>
+					           全栈开发</p>
             <p>喜欢的书：《红与黑》《红楼梦》</p>
             <p>喜欢的音乐：《十年》《喜欢你》《海阔天空》《你的背包》</p>
             <p><a href="http://wpa.qq.com/msgrd?v=3&uin=1169763240&site=qq&menu=yes" target="_blank" style="color:#FF0000;text-decoration:underline">联系作者</a></p>
