--- a/src/main/resources/static/css/striveboybiao-xf.css
+++ b/src/main/resources/static/css/striveboybiao-xf.css
@@ -1,5 +1,5 @@
 .sk-folding-cube {
-			  margin: 40px 17%;
+			  margin: 40px 40px 70% 30%;
 			  width: 40px;
 			  height: 40px;
 			  position: absolute;
