--- a/src/main/resources/templates/blog/about.html
+++ b/src/main/resources/templates/blog/about.html
@@ -40,7 +40,7 @@
   <div class="about left">
     <h2>Just about me</h2>
     <p><span style="font-size: 12px;">一个90后的我！和每一个人都一样，都有一颗爱玩和爱旅游的心，我喜欢在路上的感觉，因为这样不管你在生活中或者是在工作中有多大的困难和不开心的事，都完全忘记了。在路上，就是从一个熟悉的地方到一个陌生的地方开始一段新的起点。在路上你可以发现千奇百怪的事物和认识一些志同道合的人一起去分享这美好的过程，90后的我们并非生来只为待在屋里，这是一个值得探索的世界，保有你对自然的敬畏，因为，有些经历一生也只能有一次。如果你爱一个人，请带TA去雨崩，那里是天堂；如果你恨一个人，请带TA去雨崩，那里是地狱。</span></p>
-    <p><span style="font-size: 12px;">人生就是一个得与失的过程，而我却是一个幸运者，得到的永远比失去的多。而我不但喜欢旅行也喜欢学习新的技术，在外面晃荡了两三年的时间，无意间发现了互联网的神秘和强大。生活的压力迫使我不得已放弃了一些在路上的时间，换来虽有些蓬头垢面的工作，但是我仍然很享受那些熬得只剩下黑眼圈的日子，因为我在学习使用Photoshop、Flash、Dreamweaver、dedecms、ASP、PHP、JSP...中激发了兴趣，然后越走越远....</span></p>
+    <p><span style="font-size: 12px;">人生就是一个得与失的过程，而我却是一个幸运者，得到的永远比失去的多。而我不但喜欢旅行也喜欢学习新的技术，在外面晃荡了两三年的时间，无意间发现了互联网的神秘和强大。生活的压力迫使我不得已放弃了一些在路上的时间，换来虽有些蓬头垢面的工作，但是我仍然很享受那些熬得只剩下黑眼圈的日子，因为我在学习使用Photoshop、Flash、Dreamweaver、HTML、JAVA、C++、JSP...中激发了兴趣，然后越走越远....</span></p>
     <p><span style="font-size: 12px;">还属于菜鸟的我突发奇想，想做一个个人博客来分享我在学习和旅行的一些心得与在路上中的心情，网站名想了好久都不知道起一个什么名字好，在一次的网上冲浪中发现了“何彪个人博客”这一个词。</span></p>
     <p><span style="font-size: 12px;">“何彪个人博客”我理解为：“就像在云南丽江终年云雾缭绕的玉龙雪山,即使在最晴朗的日子,阳光也无法穿透云层,传说在秋分那天,日月交合,同辉同映,神灵会在那天 ,将人世间最完美的爱情阳光,赐予人间.如果那天云开雾搜索散,神奇的阳光就会铺满整个山谷. 每个被阳光抚摸到的人,都会获得最美,最圣洁的爱情.但是善妒的山神,在那一天从不开放胸怀.那一天总是会有云,有雾,有雨.所以人世间很难有完美的爱情. 而一米阳光就是上面故事的延伸:虽然秋分这天的阳光无法穿透云层,但是在玉龙和哈巴雪山交界,穿空肃立最陡峭的崖壁上有一处山洞,据说山洞里面居住的是殉情而死的风之女,她痛恨山神刁难人世间的男女,所以,她会在秋分的正午时分,趁山神打盹的工夫,偷偷地将万丈爱情阳光,剪下最绚丽的一米,藏于山洞之中,所以山神很快就会发觉,他醒来后立刻追回那一米阳光.所以这一米爱情阳光只能在人间停留一个盹儿的工夫就会消失.如果有最勇敢最幸运的人,在正午时分来到风之女的山洞里,他们就会得到最绚丽的完美爱情这其实也向我们揭示了爱情的真缔:人世间的爱情,都是有瑕疵的。”这和喜欢在路上，喜欢旅行的人一样的，每一天在一个陌生早上睡醒来，站在阳台上看着那一缕阳光从东方缓缓升起，照着大地的每一个人......！</span></p>
     <p><span style="font-size: 12px;">所以，我认为旅行的意义：把自己重新放到另一个新的环境里面，重新认识自己。尽管做了功课，但还是会遇到很多未知的因素，与惊喜。不知不觉中，就会很享受，那种从陌生到熟悉的状态，就会很小心地去收集每天，每时每刻的小惊喜。旅行让我们更加勇敢地面对生活，面对未知，因为未来无时无刻有着惊喜出现。就像厦门，真正的厦门，鼓浪屿人都很懒散，而我们就这样沉寂在这份懒散当中，看看海，听听海浪的声音，看夕阳西下，听听风的声音，发发呆，想想心事，吃着美食，就这样过了一下午的时间，时间就这样被浪费了。。。。很舒服，很自由，很逍遥的状态....~~~</span></p>
@@ -49,7 +49,7 @@
     <h2>About my blog</h2>
     <p>域  名：<a href="/" class="blog_link">www.zizhuling.cn</a></p>
     <p>服务器：阿里云服务器</p>
-    <p>备案号：黔ICP备15009647号</p>
+    <p>备案号：鄂ICP备18012534号</p>
     <p>创建时间：创建于2017年03月06日</p>
     <p><span class="STYLE1 STYLE3">今天是: 
       <script language=Javascript type=text/Javascript> 
@@ -150,8 +150,8 @@ document.write("<font color=red>"+daysold+"</font>天 !");
       <p>生日：1994-08-18</p>
       <p>籍贯：湖北--孝感市</p>
       <p>现居：上海--松江区</p>
-      <p>职业：网站设计、网站制作<br>
-        网页美工</p>
+      <p>职业：程序师、JAVA开发<br>
+        全栈开发</p>
       <p>喜欢的书：《红与黑》《红楼梦》</p>
       <p>喜欢的音乐：《十年》《喜欢你》《海阔天空》《你的背包》</p>
       <p><a href="http://wpa.qq.com/msgrd?v=3&uin=1169763240&site=qq&menu=yes" target="_blank" style="color:#FF0000;text-decoration:underline">联系作者</a></p>
