--- a/src/main/resources/templates/blog/article.html
+++ b/src/main/resources/templates/blog/article.html
@@ -178,6 +178,6 @@ swfobject.registerObject("FlashID");
 <!--双击文字特效-->
 <script src="/js/striveboybiao-text.js"></script>
 <!--下雪特效-->
-<script src="/js/striveboybiao-snow.js"></script>
+<!--<script src="/js/striveboybiao-snow.js"></script>-->
 </body>
 </html>
