--- a/src/main/resources/templates/blog/saying.html
+++ b/src/main/resources/templates/blog/saying.html
@@ -141,6 +141,6 @@ new slider({id:'slider'})
 <!--双击文字特效-->
 <script src="/js/striveboybiao-text.js"></script>
 <!--下雪特效-->
-<script src="/js/striveboybiao-snow.js"></script>
+<!--<script src="/js/striveboybiao-snow.js"></script>-->
 </body>
 </html>
